// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`crash from bigtools 1`] = `[]`;

exports[`inside file deeply 1`] = `
[
  {
    "end": 20010,
    "score": 18,
    "start": 20009,
  },
  {
    "end": 20011,
    "score": 19,
    "start": 20010,
  },
  {
    "end": 20012,
    "score": 18,
    "start": 20011,
  },
  {
    "end": 20013,
    "score": 17,
    "start": 20012,
  },
  {
    "end": 20014,
    "score": 17,
    "start": 20013,
  },
  {
    "end": 20015,
    "score": 16,
    "start": 20014,
  },
  {
    "end": 20016,
    "score": 16,
    "start": 20015,
  },
  {
    "end": 20017,
    "score": 18,
    "start": 20016,
  },
  {
    "end": 20018,
    "score": 17,
    "start": 20017,
  },
  {
    "end": 20019,
    "score": 17,
    "start": 20018,
  },
]
`;

exports[`loads a larger bigwig file at different scales 1`] = `
[
  {
    "end": 2068352,
    "maxScore": 1,
    "minScore": 0,
    "score": 0.004236222847948511,
    "start": 1988800,
    "summary": true,
  },
  {
    "end": 2147904,
    "maxScore": 9,
    "minScore": 0,
    "score": 0.12218423169750603,
    "start": 2068352,
    "summary": true,
  },
]
`;

exports[`loads a larger bigwig file at different scales 2`] = `
[
  {
    "end": 2073477,
    "score": 0,
    "start": 2069069,
  },
  {
    "end": 2073485,
    "score": 1,
    "start": 2073477,
  },
  {
    "end": 2073564,
    "score": 2,
    "start": 2073485,
  },
  {
    "end": 2076947,
    "score": 0,
    "start": 2073564,
  },
  {
    "end": 2076956,
    "score": 1,
    "start": 2076947,
  },
  {
    "end": 2077030,
    "score": 2,
    "start": 2076956,
  },
  {
    "end": 2077034,
    "score": 1,
    "start": 2077030,
  },
  {
    "end": 2077775,
    "score": 0,
    "start": 2077034,
  },
  {
    "end": 2077844,
    "score": 1,
    "start": 2077775,
  },
  {
    "end": 2080490,
    "score": 0,
    "start": 2077844,
  },
]
`;

exports[`loads a larger bigwig file at different scales 3`] = `
[
  {
    "end": 2073477,
    "score": 0,
    "start": 2069069,
  },
  {
    "end": 2073485,
    "score": 1,
    "start": 2073477,
  },
  {
    "end": 2073564,
    "score": 2,
    "start": 2073485,
  },
  {
    "end": 2076947,
    "score": 0,
    "start": 2073564,
  },
  {
    "end": 2076956,
    "score": 1,
    "start": 2076947,
  },
  {
    "end": 2077030,
    "score": 2,
    "start": 2076956,
  },
  {
    "end": 2077034,
    "score": 1,
    "start": 2077030,
  },
  {
    "end": 2077775,
    "score": 0,
    "start": 2077034,
  },
  {
    "end": 2077844,
    "score": 1,
    "start": 2077775,
  },
  {
    "end": 2080490,
    "score": 0,
    "start": 2077844,
  },
]
`;

exports[`loads a larger bigwig file at different scales 4`] = `
[
  {
    "end": 2073477,
    "score": 0,
    "start": 2069069,
  },
  {
    "end": 2073485,
    "score": 1,
    "start": 2073477,
  },
  {
    "end": 2073564,
    "score": 2,
    "start": 2073485,
  },
  {
    "end": 2076947,
    "score": 0,
    "start": 2073564,
  },
  {
    "end": 2076956,
    "score": 1,
    "start": 2076947,
  },
  {
    "end": 2077030,
    "score": 2,
    "start": 2076956,
  },
  {
    "end": 2077034,
    "score": 1,
    "start": 2077030,
  },
  {
    "end": 2077775,
    "score": 0,
    "start": 2077034,
  },
  {
    "end": 2077844,
    "score": 1,
    "start": 2077775,
  },
  {
    "end": 2080490,
    "score": 0,
    "start": 2077844,
  },
]
`;

exports[`loads a larger bigwig file at different scales 5`] = `
[
  {
    "end": 2073477,
    "score": 0,
    "start": 2069069,
  },
  {
    "end": 2073485,
    "score": 1,
    "start": 2073477,
  },
  {
    "end": 2073564,
    "score": 2,
    "start": 2073485,
  },
  {
    "end": 2076947,
    "score": 0,
    "start": 2073564,
  },
  {
    "end": 2076956,
    "score": 1,
    "start": 2076947,
  },
  {
    "end": 2077030,
    "score": 2,
    "start": 2076956,
  },
  {
    "end": 2077034,
    "score": 1,
    "start": 2077030,
  },
  {
    "end": 2077775,
    "score": 0,
    "start": 2077034,
  },
  {
    "end": 2077844,
    "score": 1,
    "start": 2077775,
  },
  {
    "end": 2080490,
    "score": 0,
    "start": 2077844,
  },
]
`;

exports[`loads bedgraph bigwig file 1`] = `
[
  {
    "end": 3,
    "score": 1,
    "start": 2,
  },
  {
    "end": 4,
    "score": 1,
    "start": 3,
  },
  {
    "end": 5,
    "score": 1,
    "start": 4,
  },
  {
    "end": 6,
    "score": 1,
    "start": 5,
  },
  {
    "end": 7,
    "score": 1,
    "start": 6,
  },
  {
    "end": 8,
    "score": 2,
    "start": 7,
  },
  {
    "end": 9,
    "score": 2,
    "start": 8,
  },
  {
    "end": 10,
    "score": 2,
    "start": 9,
  },
  {
    "end": 11,
    "score": 2,
    "start": 10,
  },
  {
    "end": 12,
    "score": 2,
    "start": 11,
  },
  {
    "end": 13,
    "score": 2,
    "start": 12,
  },
  {
    "end": 14,
    "score": 2,
    "start": 13,
  },
  {
    "end": 15,
    "score": 2,
    "start": 14,
  },
  {
    "end": 16,
    "score": 3,
    "start": 15,
  },
  {
    "end": 17,
    "score": 4,
    "start": 16,
  },
  {
    "end": 18,
    "score": 5,
    "start": 17,
  },
  {
    "end": 19,
    "score": 5,
    "start": 18,
  },
  {
    "end": 20,
    "score": 5,
    "start": 19,
  },
  {
    "end": 21,
    "score": 5,
    "start": 20,
  },
  {
    "end": 22,
    "score": 5,
    "start": 21,
  },
  {
    "end": 23,
    "score": 5,
    "start": 22,
  },
  {
    "end": 24,
    "score": 5,
    "start": 23,
  },
  {
    "end": 25,
    "score": 5,
    "start": 24,
  },
  {
    "end": 26,
    "score": 5,
    "start": 25,
  },
  {
    "end": 27,
    "score": 5,
    "start": 26,
  },
  {
    "end": 28,
    "score": 5,
    "start": 27,
  },
  {
    "end": 29,
    "score": 5,
    "start": 28,
  },
  {
    "end": 30,
    "score": 5,
    "start": 29,
  },
  {
    "end": 31,
    "score": 5,
    "start": 30,
  },
  {
    "end": 32,
    "score": 5,
    "start": 31,
  },
  {
    "end": 33,
    "score": 5,
    "start": 32,
  },
  {
    "end": 34,
    "score": 5,
    "start": 33,
  },
  {
    "end": 35,
    "score": 5,
    "start": 34,
  },
  {
    "end": 36,
    "score": 5,
    "start": 35,
  },
  {
    "end": 37,
    "score": 5,
    "start": 36,
  },
  {
    "end": 38,
    "score": 5,
    "start": 37,
  },
  {
    "end": 39,
    "score": 5,
    "start": 38,
  },
  {
    "end": 40,
    "score": 5,
    "start": 39,
  },
  {
    "end": 41,
    "score": 5,
    "start": 40,
  },
  {
    "end": 42,
    "score": 5,
    "start": 41,
  },
  {
    "end": 43,
    "score": 6,
    "start": 42,
  },
  {
    "end": 44,
    "score": 7,
    "start": 43,
  },
  {
    "end": 45,
    "score": 7,
    "start": 44,
  },
  {
    "end": 46,
    "score": 7,
    "start": 45,
  },
  {
    "end": 47,
    "score": 7,
    "start": 46,
  },
  {
    "end": 48,
    "score": 8,
    "start": 47,
  },
  {
    "end": 49,
    "score": 8,
    "start": 48,
  },
  {
    "end": 50,
    "score": 8,
    "start": 49,
  },
  {
    "end": 51,
    "score": 8,
    "start": 50,
  },
  {
    "end": 52,
    "score": 8,
    "start": 51,
  },
  {
    "end": 53,
    "score": 8,
    "start": 52,
  },
  {
    "end": 54,
    "score": 8,
    "start": 53,
  },
  {
    "end": 55,
    "score": 8,
    "start": 54,
  },
  {
    "end": 56,
    "score": 9,
    "start": 55,
  },
  {
    "end": 57,
    "score": 9,
    "start": 56,
  },
  {
    "end": 58,
    "score": 9,
    "start": 57,
  },
  {
    "end": 59,
    "score": 9,
    "start": 58,
  },
  {
    "end": 60,
    "score": 9,
    "start": 59,
  },
  {
    "end": 61,
    "score": 9,
    "start": 60,
  },
  {
    "end": 62,
    "score": 9,
    "start": 61,
  },
  {
    "end": 63,
    "score": 9,
    "start": 62,
  },
  {
    "end": 64,
    "score": 9,
    "start": 63,
  },
  {
    "end": 65,
    "score": 9,
    "start": 64,
  },
  {
    "end": 66,
    "score": 10,
    "start": 65,
  },
  {
    "end": 67,
    "score": 10,
    "start": 66,
  },
  {
    "end": 68,
    "score": 10,
    "start": 67,
  },
  {
    "end": 69,
    "score": 10,
    "start": 68,
  },
  {
    "end": 70,
    "score": 10,
    "start": 69,
  },
  {
    "end": 71,
    "score": 10,
    "start": 70,
  },
  {
    "end": 72,
    "score": 10,
    "start": 71,
  },
  {
    "end": 73,
    "score": 10,
    "start": 72,
  },
  {
    "end": 74,
    "score": 10,
    "start": 73,
  },
  {
    "end": 75,
    "score": 10,
    "start": 74,
  },
  {
    "end": 76,
    "score": 10,
    "start": 75,
  },
  {
    "end": 77,
    "score": 11,
    "start": 76,
  },
  {
    "end": 78,
    "score": 11,
    "start": 77,
  },
  {
    "end": 79,
    "score": 11,
    "start": 78,
  },
  {
    "end": 80,
    "score": 11,
    "start": 79,
  },
  {
    "end": 81,
    "score": 11,
    "start": 80,
  },
  {
    "end": 82,
    "score": 11,
    "start": 81,
  },
  {
    "end": 83,
    "score": 11,
    "start": 82,
  },
  {
    "end": 84,
    "score": 11,
    "start": 83,
  },
  {
    "end": 85,
    "score": 11,
    "start": 84,
  },
  {
    "end": 86,
    "score": 11,
    "start": 85,
  },
  {
    "end": 87,
    "score": 11,
    "start": 86,
  },
  {
    "end": 88,
    "score": 11,
    "start": 87,
  },
  {
    "end": 89,
    "score": 11,
    "start": 88,
  },
  {
    "end": 90,
    "score": 11,
    "start": 89,
  },
  {
    "end": 91,
    "score": 12,
    "start": 90,
  },
  {
    "end": 92,
    "score": 12,
    "start": 91,
  },
  {
    "end": 93,
    "score": 12,
    "start": 92,
  },
  {
    "end": 94,
    "score": 12,
    "start": 93,
  },
  {
    "end": 95,
    "score": 13,
    "start": 94,
  },
  {
    "end": 96,
    "score": 13,
    "start": 95,
  },
  {
    "end": 97,
    "score": 13,
    "start": 96,
  },
  {
    "end": 98,
    "score": 13,
    "start": 97,
  },
  {
    "end": 99,
    "score": 13,
    "start": 98,
  },
  {
    "end": 100,
    "score": 13,
    "start": 99,
  },
]
`;

exports[`loads bedgraph bigwig file 2`] = `
[
  {
    "end": 162,
    "maxScore": 13,
    "minScore": 1,
    "score": 9.0125,
    "start": 2,
    "summary": true,
  },
]
`;

exports[`loads bedgraph bigwig file 3`] = `
[
  {
    "end": 642,
    "maxScore": 24,
    "minScore": 1,
    "score": 9.746875,
    "start": 2,
    "summary": true,
  },
]
`;

exports[`loads bedgraph bigwig file 4`] = `
[
  {
    "end": 2562,
    "maxScore": 32,
    "minScore": 13,
    "score": 21.7625,
    "start": 1922,
    "summary": true,
  },
]
`;

exports[`loads fixedstep bigwig with starts 1`] = `[]`;

exports[`loads fixedstep bigwig with starts 2`] = `
[
  {
    "end": 11492,
    "score": 0.47099998593330383,
    "start": 11489,
  },
  {
    "end": 11495,
    "score": 5.14900016784668,
    "start": 11492,
  },
  {
    "end": 11498,
    "score": -3.75600004196167,
    "start": 11495,
  },
  {
    "end": 11501,
    "score": 10.48900032043457,
    "start": 11498,
  },
  {
    "end": 11504,
    "score": 1.0709999799728394,
    "start": 11501,
  },
  {
    "end": 11507,
    "score": -13.446999549865723,
    "start": 11504,
  },
  {
    "end": 11510,
    "score": -6.321000099182129,
    "start": 11507,
  },
  {
    "end": 11513,
    "score": 4.25600004196167,
    "start": 11510,
  },
  {
    "end": 11516,
    "score": -1.784999966621399,
    "start": 11513,
  },
  {
    "end": 11519,
    "score": -10.321000099182129,
    "start": 11516,
  },
  {
    "end": 11522,
    "score": 0.42800000309944153,
    "start": 11519,
  },
  {
    "end": 11525,
    "score": -7.659999847412109,
    "start": 11522,
  },
  {
    "end": 11528,
    "score": 1.9010000228881836,
    "start": 11525,
  },
  {
    "end": 11531,
    "score": -11.713000297546387,
    "start": 11528,
  },
  {
    "end": 11534,
    "score": -10.855999946594238,
    "start": 11531,
  },
  {
    "end": 11537,
    "score": -6.170000076293945,
    "start": 11534,
  },
  {
    "end": 11540,
    "score": -2.931999921798706,
    "start": 11537,
  },
  {
    "end": 11549,
    "score": -15.66100025177002,
    "start": 11546,
  },
  {
    "end": 11552,
    "score": -1.6109999418258667,
    "start": 11549,
  },
  {
    "end": 11555,
    "score": -7.783999919891357,
    "start": 11552,
  },
  {
    "end": 11558,
    "score": -0.9760000109672546,
    "start": 11555,
  },
  {
    "end": 11561,
    "score": -2.2209999561309814,
    "start": 11558,
  },
  {
    "end": 11564,
    "score": -5.117000102996826,
    "start": 11561,
  },
  {
    "end": 11567,
    "score": -15.664999961853027,
    "start": 11564,
  },
  {
    "end": 11570,
    "score": -3.4189999103546143,
    "start": 11567,
  },
  {
    "end": 11573,
    "score": -8.244999885559082,
    "start": 11570,
  },
  {
    "end": 11576,
    "score": -1.7350000143051147,
    "start": 11573,
  },
  {
    "end": 11579,
    "score": 0.08799999952316284,
    "start": 11576,
  },
  {
    "end": 11582,
    "score": -7.298999786376953,
    "start": 11579,
  },
  {
    "end": 11585,
    "score": -8.192000389099121,
    "start": 11582,
  },
  {
    "end": 11588,
    "score": 1.7359999418258667,
    "start": 11585,
  },
  {
    "end": 11591,
    "score": 3.9000000953674316,
    "start": 11588,
  },
  {
    "end": 11594,
    "score": -15.710000038146973,
    "start": 11591,
  },
  {
    "end": 11597,
    "score": -8.050000190734863,
    "start": 11594,
  },
  {
    "end": 11600,
    "score": -8.753999710083008,
    "start": 11597,
  },
  {
    "end": 11603,
    "score": -0.5989999771118164,
    "start": 11600,
  },
  {
    "end": 11606,
    "score": -0.9769999980926514,
    "start": 11603,
  },
  {
    "end": 11609,
    "score": -0.5360000133514404,
    "start": 11606,
  },
  {
    "end": 11615,
    "score": -15.128000259399414,
    "start": 11612,
  },
  {
    "end": 11621,
    "score": -1.4800000190734863,
    "start": 11618,
  },
  {
    "end": 11624,
    "score": -1.2330000400543213,
    "start": 11621,
  },
  {
    "end": 11627,
    "score": -1.965000033378601,
    "start": 11624,
  },
  {
    "end": 11630,
    "score": 3.3489999771118164,
    "start": 11627,
  },
  {
    "end": 11633,
    "score": 0.42500001192092896,
    "start": 11630,
  },
  {
    "end": 11636,
    "score": -7.388000011444092,
    "start": 11633,
  },
  {
    "end": 11639,
    "score": -2.8320000171661377,
    "start": 11636,
  },
  {
    "end": 11642,
    "score": -13.104999542236328,
    "start": 11639,
  },
  {
    "end": 11645,
    "score": -9.470000267028809,
    "start": 11642,
  },
  {
    "end": 11648,
    "score": -9.57800006866455,
    "start": 11645,
  },
  {
    "end": 11651,
    "score": -7.874000072479248,
    "start": 11648,
  },
  {
    "end": 11654,
    "score": 2.7139999866485596,
    "start": 11651,
  },
  {
    "end": 11657,
    "score": -7.882999897003174,
    "start": 11654,
  },
  {
    "end": 11660,
    "score": 3.260999917984009,
    "start": 11657,
  },
  {
    "end": 11663,
    "score": 7.431000232696533,
    "start": 11660,
  },
  {
    "end": 11666,
    "score": -9.64900016784668,
    "start": 11663,
  },
  {
    "end": 11669,
    "score": -4.630000114440918,
    "start": 11666,
  },
  {
    "end": 11672,
    "score": -3.0339999198913574,
    "start": 11669,
  },
  {
    "end": 11675,
    "score": -12.366999626159668,
    "start": 11672,
  },
  {
    "end": 11678,
    "score": -5.486999988555908,
    "start": 11675,
  },
  {
    "end": 11681,
    "score": -5.177999973297119,
    "start": 11678,
  },
  {
    "end": 11684,
    "score": 0.49300000071525574,
    "start": 11681,
  },
  {
    "end": 11687,
    "score": -9.322999954223633,
    "start": 11684,
  },
  {
    "end": 11690,
    "score": -6.815000057220459,
    "start": 11687,
  },
  {
    "end": 11693,
    "score": -16.371999740600586,
    "start": 11690,
  },
  {
    "end": 11696,
    "score": -16.211000442504883,
    "start": 11693,
  },
  {
    "end": 11699,
    "score": -15.335000038146973,
    "start": 11696,
  },
  {
    "end": 11702,
    "score": -9.621000289916992,
    "start": 11699,
  },
  {
    "end": 11705,
    "score": -6.48799991607666,
    "start": 11702,
  },
  {
    "end": 11708,
    "score": 2.8429999351501465,
    "start": 11705,
  },
  {
    "end": 11711,
    "score": 0.42800000309944153,
    "start": 11708,
  },
  {
    "end": 11714,
    "score": -8.057999610900879,
    "start": 11711,
  },
  {
    "end": 11717,
    "score": -1.440999984741211,
    "start": 11714,
  },
  {
    "end": 11720,
    "score": 2.8310000896453857,
    "start": 11717,
  },
  {
    "end": 11723,
    "score": 3.864000082015991,
    "start": 11720,
  },
  {
    "end": 11732,
    "score": -3.8559999465942383,
    "start": 11729,
  },
  {
    "end": 11735,
    "score": -14.99899959564209,
    "start": 11732,
  },
  {
    "end": 11738,
    "score": 3.2890000343322754,
    "start": 11735,
  },
  {
    "end": 11741,
    "score": -16.163999557495117,
    "start": 11738,
  },
  {
    "end": 11744,
    "score": -3.5999999046325684,
    "start": 11741,
  },
  {
    "end": 11747,
    "score": -1.621999979019165,
    "start": 11744,
  },
  {
    "end": 11750,
    "score": -3.187000036239624,
    "start": 11747,
  },
  {
    "end": 11753,
    "score": -0.5019999742507935,
    "start": 11750,
  },
  {
    "end": 11756,
    "score": 3.002000093460083,
    "start": 11753,
  },
  {
    "end": 11759,
    "score": 2.8320000171661377,
    "start": 11756,
  },
  {
    "end": 11762,
    "score": -1.378000020980835,
    "start": 11759,
  },
  {
    "end": 11765,
    "score": -1.5640000104904175,
    "start": 11762,
  },
  {
    "end": 11768,
    "score": -3.444999933242798,
    "start": 11765,
  },
  {
    "end": 11771,
    "score": -12.366999626159668,
    "start": 11768,
  },
  {
    "end": 11774,
    "score": 2.6730000972747803,
    "start": 11771,
  },
  {
    "end": 11777,
    "score": -9.229999542236328,
    "start": 11774,
  },
  {
    "end": 11780,
    "score": 12.592000007629395,
    "start": 11777,
  },
  {
    "end": 11783,
    "score": -11.852999687194824,
    "start": 11780,
  },
  {
    "end": 11786,
    "score": -1.1749999523162842,
    "start": 11783,
  },
  {
    "end": 11789,
    "score": -3.128999948501587,
    "start": 11786,
  },
  {
    "end": 11792,
    "score": 3.6630001068115234,
    "start": 11789,
  },
  {
    "end": 11795,
    "score": -11.982000350952148,
    "start": 11792,
  },
  {
    "end": 11798,
    "score": -14.75,
    "start": 11795,
  },
  {
    "end": 11801,
    "score": 0.5600000023841858,
    "start": 11798,
  },
  {
    "end": 11804,
    "score": -3.124000072479248,
    "start": 11801,
  },
  {
    "end": 11807,
    "score": 2.249000072479248,
    "start": 11804,
  },
  {
    "end": 11810,
    "score": -3.8889999389648438,
    "start": 11807,
  },
  {
    "end": 11813,
    "score": -5.505000114440918,
    "start": 11810,
  },
  {
    "end": 11816,
    "score": -9.392999649047852,
    "start": 11813,
  },
  {
    "end": 11819,
    "score": 14.244000434875488,
    "start": 11816,
  },
  {
    "end": 11822,
    "score": -3.177999973297119,
    "start": 11819,
  },
  {
    "end": 11825,
    "score": -19.1560001373291,
    "start": 11822,
  },
  {
    "end": 11828,
    "score": -3.7190001010894775,
    "start": 11825,
  },
  {
    "end": 11831,
    "score": -3.688999891281128,
    "start": 11828,
  },
  {
    "end": 11834,
    "score": -8.920999526977539,
    "start": 11831,
  },
  {
    "end": 11837,
    "score": 7.686999797821045,
    "start": 11834,
  },
  {
    "end": 11840,
    "score": 2.7060000896453857,
    "start": 11837,
  },
  {
    "end": 11843,
    "score": -3.7130000591278076,
    "start": 11840,
  },
  {
    "end": 11846,
    "score": -12.866999626159668,
    "start": 11843,
  },
  {
    "end": 11849,
    "score": 5.748000144958496,
    "start": 11846,
  },
  {
    "end": 11852,
    "score": -8.998000144958496,
    "start": 11849,
  },
  {
    "end": 11855,
    "score": -2.058000087738037,
    "start": 11852,
  },
  {
    "end": 11858,
    "score": -7.059000015258789,
    "start": 11855,
  },
  {
    "end": 11861,
    "score": 1.003999948501587,
    "start": 11858,
  },
  {
    "end": 11864,
    "score": -5.2230000495910645,
    "start": 11861,
  },
  {
    "end": 11867,
    "score": 2.5820000171661377,
    "start": 11864,
  },
  {
    "end": 11870,
    "score": -7.480999946594238,
    "start": 11867,
  },
  {
    "end": 11873,
    "score": -15.852999687194824,
    "start": 11870,
  },
  {
    "end": 11876,
    "score": -8.194000244140625,
    "start": 11873,
  },
  {
    "end": 11879,
    "score": -0.1720000058412552,
    "start": 11876,
  },
  {
    "end": 11882,
    "score": -6.638000011444092,
    "start": 11879,
  },
  {
    "end": 11885,
    "score": -2.2990000247955322,
    "start": 11882,
  },
  {
    "end": 11888,
    "score": -8.72700023651123,
    "start": 11885,
  },
  {
    "end": 11891,
    "score": -10.718000411987305,
    "start": 11888,
  },
  {
    "end": 11894,
    "score": -8.227999687194824,
    "start": 11891,
  },
  {
    "end": 11897,
    "score": -2.0989999771118164,
    "start": 11894,
  },
  {
    "end": 11900,
    "score": 0.2639999985694885,
    "start": 11897,
  },
  {
    "end": 11903,
    "score": -10.418000221252441,
    "start": 11900,
  },
  {
    "end": 11906,
    "score": -10.383000373840332,
    "start": 11903,
  },
  {
    "end": 11909,
    "score": 3.614000082015991,
    "start": 11906,
  },
  {
    "end": 11912,
    "score": 6.59499979019165,
    "start": 11909,
  },
  {
    "end": 11915,
    "score": -2.490000009536743,
    "start": 11912,
  },
  {
    "end": 11918,
    "score": -17.437999725341797,
    "start": 11915,
  },
  {
    "end": 11921,
    "score": -11.024999618530273,
    "start": 11918,
  },
  {
    "end": 11924,
    "score": -10.916000366210938,
    "start": 11921,
  },
  {
    "end": 11927,
    "score": 3.3550000190734863,
    "start": 11924,
  },
  {
    "end": 11930,
    "score": -4.974999904632568,
    "start": 11927,
  },
  {
    "end": 11933,
    "score": -3.9010000228881836,
    "start": 11930,
  },
  {
    "end": 11936,
    "score": -4.066999912261963,
    "start": 11933,
  },
  {
    "end": 11939,
    "score": 3.569999933242798,
    "start": 11936,
  },
  {
    "end": 11942,
    "score": -1.9670000076293945,
    "start": 11939,
  },
  {
    "end": 11945,
    "score": -7.986000061035156,
    "start": 11942,
  },
  {
    "end": 11948,
    "score": -14.076000213623047,
    "start": 11945,
  },
  {
    "end": 11951,
    "score": -1.2489999532699585,
    "start": 11948,
  },
  {
    "end": 11954,
    "score": -8.175000190734863,
    "start": 11951,
  },
  {
    "end": 11957,
    "score": -2.615000009536743,
    "start": 11954,
  },
  {
    "end": 11960,
    "score": -4.669000148773193,
    "start": 11957,
  },
  {
    "end": 11963,
    "score": -10.083999633789062,
    "start": 11960,
  },
  {
    "end": 11966,
    "score": -5.091000080108643,
    "start": 11963,
  },
  {
    "end": 11969,
    "score": 3.4609999656677246,
    "start": 11966,
  },
  {
    "end": 11972,
    "score": -6.998000144958496,
    "start": 11969,
  },
  {
    "end": 11975,
    "score": -12.909000396728516,
    "start": 11972,
  },
  {
    "end": 11978,
    "score": -2.484999895095825,
    "start": 11975,
  },
  {
    "end": 11981,
    "score": -6.860000133514404,
    "start": 11978,
  },
  {
    "end": 11984,
    "score": -4.9770002365112305,
    "start": 11981,
  },
  {
    "end": 11987,
    "score": 3.3550000190734863,
    "start": 11984,
  },
  {
    "end": 11990,
    "score": 2.694999933242798,
    "start": 11987,
  },
  {
    "end": 11993,
    "score": 8.197999954223633,
    "start": 11990,
  },
  {
    "end": 11996,
    "score": -10.647000312805176,
    "start": 11993,
  },
]
`;

exports[`loads simple fixedstep bigwig 1`] = `
[
  {
    "end": 100,
    "score": 281,
    "start": 0,
  },
  {
    "end": 200,
    "score": 183,
    "start": 100,
  },
  {
    "end": 300,
    "score": 213,
    "start": 200,
  },
  {
    "end": 400,
    "score": 191,
    "start": 300,
  },
  {
    "end": 500,
    "score": 288,
    "start": 400,
  },
  {
    "end": 600,
    "score": 184,
    "start": 500,
  },
  {
    "end": 700,
    "score": 258,
    "start": 600,
  },
  {
    "end": 800,
    "score": 173,
    "start": 700,
  },
  {
    "end": 900,
    "score": 274,
    "start": 800,
  },
  {
    "end": 1000,
    "score": 292,
    "start": 900,
  },
]
`;

exports[`loads simple fixedstep bigwig 2`] = `
[
  {
    "end": 100,
    "score": 281,
    "start": 0,
  },
  {
    "end": 200,
    "score": 183,
    "start": 100,
  },
  {
    "end": 300,
    "score": 213,
    "start": 200,
  },
  {
    "end": 400,
    "score": 191,
    "start": 300,
  },
  {
    "end": 500,
    "score": 288,
    "start": 400,
  },
  {
    "end": 600,
    "score": 184,
    "start": 500,
  },
  {
    "end": 700,
    "score": 258,
    "start": 600,
  },
  {
    "end": 800,
    "score": 173,
    "start": 700,
  },
  {
    "end": 900,
    "score": 274,
    "start": 800,
  },
  {
    "end": 1000,
    "score": 292,
    "start": 900,
  },
]
`;

exports[`loads simple fixedstep bigwig 3`] = `
[
  {
    "end": 100,
    "score": 281,
    "start": 0,
  },
  {
    "end": 200,
    "score": 183,
    "start": 100,
  },
  {
    "end": 300,
    "score": 213,
    "start": 200,
  },
  {
    "end": 400,
    "score": 191,
    "start": 300,
  },
  {
    "end": 500,
    "score": 288,
    "start": 400,
  },
  {
    "end": 600,
    "score": 184,
    "start": 500,
  },
  {
    "end": 700,
    "score": 258,
    "start": 600,
  },
  {
    "end": 800,
    "score": 173,
    "start": 700,
  },
  {
    "end": 900,
    "score": 274,
    "start": 800,
  },
  {
    "end": 1000,
    "score": 292,
    "start": 900,
  },
]
`;

exports[`loads simple fixedstep bigwig 4`] = `
[
  {
    "end": 2000,
    "score": 192,
    "start": 1900,
  },
  {
    "end": 2100,
    "score": 114,
    "start": 2000,
  },
]
`;

exports[`loads variable step bigwig 1`] = `
[
  {
    "end": 12,
    "score": 0.7819849848747253,
    "start": 11,
  },
  {
    "end": 16,
    "score": 0.8109930157661438,
    "start": 15,
  },
  {
    "end": 20,
    "score": 0.7696009874343872,
    "start": 19,
  },
  {
    "end": 24,
    "score": 0.733830988407135,
    "start": 23,
  },
  {
    "end": 28,
    "score": 0.7320680022239685,
    "start": 27,
  },
  {
    "end": 32,
    "score": 0.5884150266647339,
    "start": 31,
  },
  {
    "end": 36,
    "score": 0.5306519865989685,
    "start": 35,
  },
  {
    "end": 40,
    "score": 0.36328500509262085,
    "start": 39,
  },
  {
    "end": 44,
    "score": 0.1721539944410324,
    "start": 43,
  },
  {
    "end": 48,
    "score": 0.06392999738454819,
    "start": 47,
  },
]
`;

exports[`missing data 1`] = `
[
  {
    "end": 4210,
    "score": 20,
    "start": 4209,
  },
  {
    "end": 4211,
    "score": 20,
    "start": 4210,
  },
  {
    "end": 4212,
    "score": 20,
    "start": 4211,
  },
  {
    "end": 4213,
    "score": 21,
    "start": 4212,
  },
  {
    "end": 4214,
    "score": 21,
    "start": 4213,
  },
  {
    "end": 4215,
    "score": 21,
    "start": 4214,
  },
  {
    "end": 4216,
    "score": 22,
    "start": 4215,
  },
  {
    "end": 4217,
    "score": 22,
    "start": 4216,
  },
  {
    "end": 4218,
    "score": 22,
    "start": 4217,
  },
  {
    "end": 4219,
    "score": 21,
    "start": 4218,
  },
]
`;

exports[`missing data 2`] = `
[
  {
    "end": 5200,
    "score": 19,
    "start": 5199,
  },
  {
    "end": 5201,
    "score": 19,
    "start": 5200,
  },
  {
    "end": 5202,
    "score": 19,
    "start": 5201,
  },
  {
    "end": 5203,
    "score": 20,
    "start": 5202,
  },
  {
    "end": 5204,
    "score": 19,
    "start": 5203,
  },
  {
    "end": 5205,
    "score": 18,
    "start": 5204,
  },
  {
    "end": 5206,
    "score": 18,
    "start": 5205,
  },
  {
    "end": 5207,
    "score": 19,
    "start": 5206,
  },
  {
    "end": 5208,
    "score": 18,
    "start": 5207,
  },
  {
    "end": 5209,
    "score": 18,
    "start": 5208,
  },
]
`;

exports[`should load a lot of summary data 1`] = `
[
  {
    "end": 86144,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 0,
    "summary": true,
  },
  {
    "end": 172288,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 86144,
    "summary": true,
  },
  {
    "end": 258432,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 172288,
    "summary": true,
  },
  {
    "end": 344576,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 258432,
    "summary": true,
  },
  {
    "end": 430720,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 344576,
    "summary": true,
  },
  {
    "end": 516864,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 430720,
    "summary": true,
  },
  {
    "end": 603008,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 516864,
    "summary": true,
  },
  {
    "end": 689152,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 603008,
    "summary": true,
  },
  {
    "end": 775296,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 689152,
    "summary": true,
  },
  {
    "end": 861440,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 775296,
    "summary": true,
  },
]
`;

exports[`should load a lot of summary data 2`] = `
[
  {
    "end": 50480384,
    "maxScore": 19.640100479125977,
    "minScore": 0,
    "score": 0.09248444591122575,
    "start": 50394240,
    "summary": true,
  },
  {
    "end": 50566528,
    "maxScore": 29.029600143432617,
    "minScore": 0,
    "score": 0.3248449502196365,
    "start": 50480384,
    "summary": true,
  },
  {
    "end": 50652672,
    "maxScore": 44.189998626708984,
    "minScore": 0,
    "score": 1.4510407430813634,
    "start": 50566528,
    "summary": true,
  },
  {
    "end": 50738816,
    "maxScore": 71.71600341796875,
    "minScore": 0,
    "score": 2.0017577412787166,
    "start": 50652672,
    "summary": true,
  },
  {
    "end": 50824960,
    "maxScore": 68.74019622802734,
    "minScore": 0,
    "score": 1.156110973070188,
    "start": 50738816,
    "summary": true,
  },
  {
    "end": 50911104,
    "maxScore": 34.37009811401367,
    "minScore": 0,
    "score": 1.481282179458206,
    "start": 50824960,
    "summary": true,
  },
  {
    "end": 50997248,
    "maxScore": 70.96739959716797,
    "minScore": 0,
    "score": 1.4128606966790562,
    "start": 50911104,
    "summary": true,
  },
  {
    "end": 51083392,
    "maxScore": 41.391300201416016,
    "minScore": 0,
    "score": 0.7212576265548543,
    "start": 50997248,
    "summary": true,
  },
  {
    "end": 51169536,
    "maxScore": 9.819890022277832,
    "minScore": 0,
    "score": 0.20769502693705816,
    "start": 51083392,
    "summary": true,
  },
  {
    "end": 51255680,
    "maxScore": 24.54990005493164,
    "minScore": 0,
    "score": 0.0633376828883356,
    "start": 51169536,
    "summary": true,
  },
]
`;

exports[`sorted names 1`] = `
[
  {
    "end": 13420,
    "score": 94,
    "start": 12232,
  },
  {
    "end": 14402,
    "score": 86,
    "start": 13420,
  },
  {
    "end": 15384,
    "score": 91,
    "start": 14402,
  },
  {
    "end": 16256,
    "score": 81,
    "start": 15384,
  },
  {
    "end": 17032,
    "score": 117,
    "start": 16256,
  },
  {
    "end": 17983,
    "score": 82,
    "start": 17032,
  },
  {
    "end": 19877,
    "score": 109,
    "start": 17983,
  },
  {
    "end": 20747,
    "score": 107,
    "start": 19877,
  },
  {
    "end": 21528,
    "score": 85,
    "start": 20747,
  },
  {
    "end": 22413,
    "score": 84,
    "start": 21528,
  },
  {
    "end": 23426,
    "score": 87,
    "start": 22413,
  },
  {
    "end": 24213,
    "score": 81,
    "start": 23426,
  },
  {
    "end": 25110,
    "score": 117,
    "start": 24213,
  },
  {
    "end": 25997,
    "score": 85,
    "start": 25110,
  },
  {
    "end": 26899,
    "score": 81,
    "start": 25997,
  },
  {
    "end": 27762,
    "score": 98,
    "start": 26899,
  },
  {
    "end": 28678,
    "score": 88,
    "start": 27762,
  },
  {
    "end": 29585,
    "score": 119,
    "start": 28678,
  },
  {
    "end": 30354,
    "score": 81,
    "start": 29585,
  },
  {
    "end": 31312,
    "score": 87,
    "start": 30354,
  },
  {
    "end": 32188,
    "score": 118,
    "start": 31312,
  },
  {
    "end": 33117,
    "score": 86,
    "start": 32188,
  },
  {
    "end": 33884,
    "score": 106,
    "start": 33117,
  },
  {
    "end": 34882,
    "score": 92,
    "start": 33884,
  },
  {
    "end": 36017,
    "score": 86,
    "start": 34882,
  },
  {
    "end": 37043,
    "score": 110,
    "start": 36017,
  },
  {
    "end": 38155,
    "score": 111,
    "start": 37043,
  },
  {
    "end": 39121,
    "score": 104,
    "start": 38155,
  },
  {
    "end": 40696,
    "score": 83,
    "start": 39863,
  },
  {
    "end": 41599,
    "score": 81,
    "start": 40696,
  },
  {
    "end": 42666,
    "score": 89,
    "start": 41599,
  },
  {
    "end": 43703,
    "score": 114,
    "start": 42666,
  },
  {
    "end": 44545,
    "score": 96,
    "start": 43703,
  },
  {
    "end": 45614,
    "score": 117,
    "start": 44545,
  },
  {
    "end": 46821,
    "score": 119,
    "start": 45614,
  },
  {
    "end": 47858,
    "score": 102,
    "start": 46821,
  },
  {
    "end": 48926,
    "score": 102,
    "start": 47858,
  },
  {
    "end": 49774,
    "score": 104,
    "start": 48926,
  },
  {
    "end": 50561,
    "score": 108,
    "start": 49774,
  },
  {
    "end": 51781,
    "score": 95,
    "start": 50561,
  },
  {
    "end": 53108,
    "score": 88,
    "start": 51781,
  },
  {
    "end": 53981,
    "score": 106,
    "start": 53108,
  },
  {
    "end": 54875,
    "score": 105,
    "start": 53981,
  },
  {
    "end": 55847,
    "score": 81,
    "start": 54875,
  },
  {
    "end": 56822,
    "score": 111,
    "start": 55847,
  },
  {
    "end": 57616,
    "score": 83,
    "start": 56822,
  },
  {
    "end": 58412,
    "score": 82,
    "start": 57616,
  },
  {
    "end": 59119,
    "score": 105,
    "start": 58412,
  },
  {
    "end": 59807,
    "score": 93,
    "start": 59119,
  },
  {
    "end": 60503,
    "score": 103,
    "start": 59807,
  },
  {
    "end": 61239,
    "score": 115,
    "start": 60503,
  },
  {
    "end": 61927,
    "score": 96,
    "start": 61239,
  },
  {
    "end": 62615,
    "score": 109,
    "start": 61927,
  },
  {
    "end": 63303,
    "score": 89,
    "start": 62615,
  },
  {
    "end": 63991,
    "score": 91,
    "start": 63303,
  },
  {
    "end": 64679,
    "score": 80,
    "start": 63991,
  },
  {
    "end": 65367,
    "score": 83,
    "start": 64679,
  },
  {
    "end": 66117,
    "score": 120,
    "start": 65367,
  },
  {
    "end": 66805,
    "score": 97,
    "start": 66117,
  },
  {
    "end": 67518,
    "score": 115,
    "start": 66805,
  },
  {
    "end": 68258,
    "score": 88,
    "start": 67518,
  },
  {
    "end": 68946,
    "score": 90,
    "start": 68258,
  },
  {
    "end": 69779,
    "score": 89,
    "start": 68946,
  },
  {
    "end": 70467,
    "score": 83,
    "start": 69779,
  },
  {
    "end": 71155,
    "score": 110,
    "start": 70467,
  },
  {
    "end": 71843,
    "score": 104,
    "start": 71155,
  },
  {
    "end": 72531,
    "score": 106,
    "start": 71843,
  },
  {
    "end": 73232,
    "score": 90,
    "start": 72531,
  },
  {
    "end": 73927,
    "score": 83,
    "start": 73232,
  },
  {
    "end": 74676,
    "score": 84,
    "start": 73927,
  },
  {
    "end": 75417,
    "score": 108,
    "start": 74676,
  },
  {
    "end": 76105,
    "score": 99,
    "start": 75417,
  },
  {
    "end": 76793,
    "score": 120,
    "start": 76105,
  },
  {
    "end": 77492,
    "score": 95,
    "start": 76793,
  },
  {
    "end": 78180,
    "score": 92,
    "start": 77492,
  },
  {
    "end": 78868,
    "score": 91,
    "start": 78180,
  },
  {
    "end": 79556,
    "score": 117,
    "start": 78868,
  },
  {
    "end": 80244,
    "score": 97,
    "start": 79556,
  },
  {
    "end": 80932,
    "score": 112,
    "start": 80244,
  },
  {
    "end": 81620,
    "score": 84,
    "start": 80932,
  },
  {
    "end": 82308,
    "score": 95,
    "start": 81620,
  },
  {
    "end": 82996,
    "score": 99,
    "start": 82308,
  },
  {
    "end": 83761,
    "score": 86,
    "start": 82996,
  },
  {
    "end": 84486,
    "score": 84,
    "start": 83761,
  },
  {
    "end": 85174,
    "score": 99,
    "start": 84486,
  },
  {
    "end": 85862,
    "score": 93,
    "start": 85174,
  },
  {
    "end": 86550,
    "score": 91,
    "start": 85862,
  },
  {
    "end": 87239,
    "score": 90,
    "start": 86550,
  },
  {
    "end": 88157,
    "score": 98,
    "start": 87239,
  },
  {
    "end": 88845,
    "score": 82,
    "start": 88157,
  },
  {
    "end": 89533,
    "score": 99,
    "start": 88845,
  },
  {
    "end": 90221,
    "score": 109,
    "start": 89533,
  },
  {
    "end": 90909,
    "score": 96,
    "start": 90221,
  },
  {
    "end": 91597,
    "score": 120,
    "start": 90909,
  },
  {
    "end": 92285,
    "score": 101,
    "start": 91597,
  },
  {
    "end": 93067,
    "score": 111,
    "start": 92285,
  },
  {
    "end": 93755,
    "score": 105,
    "start": 93067,
  },
  {
    "end": 94443,
    "score": 100,
    "start": 93755,
  },
  {
    "end": 95131,
    "score": 99,
    "start": 94443,
  },
  {
    "end": 95819,
    "score": 117,
    "start": 95131,
  },
  {
    "end": 96507,
    "score": 106,
    "start": 95819,
  },
  {
    "end": 97205,
    "score": 88,
    "start": 96507,
  },
  {
    "end": 97893,
    "score": 86,
    "start": 97205,
  },
  {
    "end": 98581,
    "score": 80,
    "start": 97893,
  },
  {
    "end": 99269,
    "score": 112,
    "start": 98581,
  },
  {
    "end": 99957,
    "score": 115,
    "start": 99269,
  },
  {
    "end": 100645,
    "score": 104,
    "start": 99957,
  },
  {
    "end": 101333,
    "score": 115,
    "start": 100645,
  },
  {
    "end": 102021,
    "score": 83,
    "start": 101333,
  },
  {
    "end": 102709,
    "score": 94,
    "start": 102021,
  },
  {
    "end": 103403,
    "score": 92,
    "start": 102709,
  },
  {
    "end": 104091,
    "score": 115,
    "start": 103403,
  },
  {
    "end": 105123,
    "score": 116,
    "start": 104091,
  },
  {
    "end": 105811,
    "score": 83,
    "start": 105123,
  },
  {
    "end": 106499,
    "score": 116,
    "start": 105811,
  },
  {
    "end": 107187,
    "score": 80,
    "start": 106499,
  },
  {
    "end": 107875,
    "score": 112,
    "start": 107187,
  },
  {
    "end": 108563,
    "score": 100,
    "start": 107875,
  },
  {
    "end": 109292,
    "score": 118,
    "start": 108563,
  },
  {
    "end": 109980,
    "score": 101,
    "start": 109292,
  },
  {
    "end": 110668,
    "score": 114,
    "start": 109980,
  },
  {
    "end": 111356,
    "score": 97,
    "start": 110668,
  },
  {
    "end": 112044,
    "score": 116,
    "start": 111356,
  },
  {
    "end": 112760,
    "score": 99,
    "start": 112044,
  },
  {
    "end": 113500,
    "score": 101,
    "start": 112760,
  },
  {
    "end": 114371,
    "score": 81,
    "start": 113500,
  },
  {
    "end": 115060,
    "score": 102,
    "start": 114371,
  },
  {
    "end": 115748,
    "score": 95,
    "start": 115060,
  },
  {
    "end": 116436,
    "score": 102,
    "start": 115748,
  },
  {
    "end": 117124,
    "score": 84,
    "start": 116436,
  },
  {
    "end": 117812,
    "score": 108,
    "start": 117124,
  },
  {
    "end": 118500,
    "score": 95,
    "start": 117812,
  },
  {
    "end": 119188,
    "score": 92,
    "start": 118500,
  },
  {
    "end": 120059,
    "score": 93,
    "start": 119188,
  },
  {
    "end": 120747,
    "score": 105,
    "start": 120059,
  },
  {
    "end": 121435,
    "score": 110,
    "start": 120747,
  },
  {
    "end": 122123,
    "score": 89,
    "start": 121435,
  },
  {
    "end": 122811,
    "score": 119,
    "start": 122123,
  },
  {
    "end": 123499,
    "score": 97,
    "start": 122811,
  },
  {
    "end": 124187,
    "score": 82,
    "start": 123499,
  },
  {
    "end": 124875,
    "score": 114,
    "start": 124187,
  },
  {
    "end": 125563,
    "score": 95,
    "start": 124875,
  },
  {
    "end": 126251,
    "score": 95,
    "start": 125563,
  },
  {
    "end": 126939,
    "score": 109,
    "start": 126251,
  },
  {
    "end": 127629,
    "score": 100,
    "start": 126939,
  },
  {
    "end": 128317,
    "score": 95,
    "start": 127629,
  },
  {
    "end": 129005,
    "score": 93,
    "start": 128317,
  },
  {
    "end": 129693,
    "score": 96,
    "start": 129005,
  },
  {
    "end": 130619,
    "score": 88,
    "start": 129693,
  },
  {
    "end": 131307,
    "score": 108,
    "start": 130619,
  },
  {
    "end": 131995,
    "score": 118,
    "start": 131307,
  },
  {
    "end": 132683,
    "score": 81,
    "start": 131995,
  },
  {
    "end": 133377,
    "score": 102,
    "start": 132683,
  },
  {
    "end": 134065,
    "score": 112,
    "start": 133377,
  },
  {
    "end": 136427,
    "score": 89,
    "start": 135724,
  },
  {
    "end": 137115,
    "score": 104,
    "start": 136427,
  },
  {
    "end": 137804,
    "score": 98,
    "start": 137115,
  },
  {
    "end": 138506,
    "score": 105,
    "start": 137804,
  },
  {
    "end": 139332,
    "score": 101,
    "start": 138506,
  },
  {
    "end": 140173,
    "score": 90,
    "start": 139332,
  },
  {
    "end": 140861,
    "score": 95,
    "start": 140173,
  },
  {
    "end": 141549,
    "score": 118,
    "start": 140861,
  },
  {
    "end": 142237,
    "score": 100,
    "start": 141549,
  },
  {
    "end": 142925,
    "score": 86,
    "start": 142237,
  },
  {
    "end": 143613,
    "score": 112,
    "start": 142925,
  },
  {
    "end": 144301,
    "score": 85,
    "start": 143613,
  },
  {
    "end": 145103,
    "score": 91,
    "start": 144301,
  },
  {
    "end": 145791,
    "score": 117,
    "start": 145103,
  },
  {
    "end": 146479,
    "score": 110,
    "start": 145791,
  },
  {
    "end": 147167,
    "score": 83,
    "start": 146479,
  },
  {
    "end": 147855,
    "score": 94,
    "start": 147167,
  },
  {
    "end": 148887,
    "score": 113,
    "start": 148199,
  },
  {
    "end": 149575,
    "score": 92,
    "start": 148887,
  },
  {
    "end": 150263,
    "score": 82,
    "start": 149575,
  },
  {
    "end": 151215,
    "score": 93,
    "start": 150263,
  },
  {
    "end": 151922,
    "score": 90,
    "start": 151215,
  },
  {
    "end": 152724,
    "score": 108,
    "start": 151922,
  },
  {
    "end": 153412,
    "score": 92,
    "start": 152724,
  },
  {
    "end": 154100,
    "score": 110,
    "start": 153412,
  },
  {
    "end": 154788,
    "score": 97,
    "start": 154100,
  },
  {
    "end": 155476,
    "score": 84,
    "start": 154788,
  },
  {
    "end": 156230,
    "score": 118,
    "start": 155476,
  },
  {
    "end": 156993,
    "score": 92,
    "start": 156230,
  },
  {
    "end": 157738,
    "score": 83,
    "start": 156993,
  },
  {
    "end": 158426,
    "score": 99,
    "start": 157738,
  },
  {
    "end": 159114,
    "score": 89,
    "start": 158426,
  },
  {
    "end": 159802,
    "score": 107,
    "start": 159114,
  },
  {
    "end": 160490,
    "score": 115,
    "start": 159802,
  },
  {
    "end": 161178,
    "score": 90,
    "start": 160490,
  },
  {
    "end": 161874,
    "score": 92,
    "start": 161178,
  },
  {
    "end": 162562,
    "score": 115,
    "start": 161874,
  },
  {
    "end": 163250,
    "score": 98,
    "start": 162562,
  },
  {
    "end": 163976,
    "score": 97,
    "start": 163250,
  },
  {
    "end": 164664,
    "score": 88,
    "start": 163976,
  },
  {
    "end": 165352,
    "score": 109,
    "start": 164664,
  },
  {
    "end": 166041,
    "score": 113,
    "start": 165352,
  },
  {
    "end": 166729,
    "score": 94,
    "start": 166041,
  },
  {
    "end": 167417,
    "score": 105,
    "start": 166729,
  },
  {
    "end": 168233,
    "score": 101,
    "start": 167417,
  },
  {
    "end": 168924,
    "score": 116,
    "start": 168233,
  },
  {
    "end": 169680,
    "score": 118,
    "start": 168924,
  },
  {
    "end": 170368,
    "score": 97,
    "start": 169680,
  },
  {
    "end": 171056,
    "score": 105,
    "start": 170368,
  },
  {
    "end": 171744,
    "score": 119,
    "start": 171056,
  },
  {
    "end": 172784,
    "score": 119,
    "start": 171744,
  },
  {
    "end": 173472,
    "score": 120,
    "start": 172784,
  },
  {
    "end": 174160,
    "score": 97,
    "start": 173472,
  },
  {
    "end": 174848,
    "score": 119,
    "start": 174160,
  },
  {
    "end": 175536,
    "score": 112,
    "start": 174848,
  },
  {
    "end": 176224,
    "score": 101,
    "start": 175536,
  },
  {
    "end": 177111,
    "score": 119,
    "start": 176224,
  },
  {
    "end": 177813,
    "score": 101,
    "start": 177111,
  },
  {
    "end": 178501,
    "score": 115,
    "start": 177813,
  },
  {
    "end": 179198,
    "score": 91,
    "start": 178501,
  },
  {
    "end": 179964,
    "score": 114,
    "start": 179198,
  },
  {
    "end": 180796,
    "score": 109,
    "start": 179964,
  },
  {
    "end": 181484,
    "score": 84,
    "start": 180796,
  },
  {
    "end": 182172,
    "score": 112,
    "start": 181484,
  },
  {
    "end": 183038,
    "score": 80,
    "start": 182172,
  },
  {
    "end": 183726,
    "score": 98,
    "start": 183038,
  },
  {
    "end": 184414,
    "score": 99,
    "start": 183726,
  },
  {
    "end": 185102,
    "score": 88,
    "start": 184414,
  },
  {
    "end": 185790,
    "score": 83,
    "start": 185102,
  },
  {
    "end": 186478,
    "score": 93,
    "start": 185790,
  },
  {
    "end": 187424,
    "score": 104,
    "start": 186478,
  },
  {
    "end": 188112,
    "score": 117,
    "start": 187424,
  },
  {
    "end": 188819,
    "score": 92,
    "start": 188112,
  },
  {
    "end": 189659,
    "score": 117,
    "start": 188819,
  },
  {
    "end": 190410,
    "score": 105,
    "start": 189659,
  },
  {
    "end": 191141,
    "score": 89,
    "start": 190410,
  },
  {
    "end": 191829,
    "score": 90,
    "start": 191141,
  },
  {
    "end": 192517,
    "score": 101,
    "start": 191829,
  },
  {
    "end": 193237,
    "score": 99,
    "start": 192517,
  },
  {
    "end": 193925,
    "score": 96,
    "start": 193237,
  },
  {
    "end": 194613,
    "score": 86,
    "start": 193925,
  },
  {
    "end": 195301,
    "score": 116,
    "start": 194613,
  },
  {
    "end": 196007,
    "score": 88,
    "start": 195301,
  },
  {
    "end": 196699,
    "score": 83,
    "start": 196007,
  },
  {
    "end": 197387,
    "score": 96,
    "start": 196699,
  },
  {
    "end": 198075,
    "score": 87,
    "start": 197387,
  },
  {
    "end": 198763,
    "score": 113,
    "start": 198075,
  },
  {
    "end": 199451,
    "score": 89,
    "start": 198763,
  },
  {
    "end": 200139,
    "score": 104,
    "start": 199451,
  },
  {
    "end": 200827,
    "score": 88,
    "start": 200139,
  },
  {
    "end": 201515,
    "score": 112,
    "start": 200827,
  },
  {
    "end": 202547,
    "score": 105,
    "start": 201515,
  },
  {
    "end": 203235,
    "score": 91,
    "start": 202547,
  },
  {
    "end": 203923,
    "score": 88,
    "start": 203235,
  },
  {
    "end": 204611,
    "score": 82,
    "start": 203923,
  },
  {
    "end": 205351,
    "score": 102,
    "start": 204611,
  },
  {
    "end": 206047,
    "score": 96,
    "start": 205351,
  },
  {
    "end": 207034,
    "score": 92,
    "start": 206047,
  },
  {
    "end": 207722,
    "score": 108,
    "start": 207034,
  },
  {
    "end": 208410,
    "score": 101,
    "start": 207722,
  },
  {
    "end": 209098,
    "score": 99,
    "start": 208410,
  },
  {
    "end": 209885,
    "score": 98,
    "start": 209098,
  },
  {
    "end": 210573,
    "score": 98,
    "start": 209885,
  },
  {
    "end": 211261,
    "score": 105,
    "start": 210573,
  },
  {
    "end": 211949,
    "score": 85,
    "start": 211261,
  },
  {
    "end": 212637,
    "score": 103,
    "start": 211949,
  },
  {
    "end": 213325,
    "score": 102,
    "start": 212637,
  },
  {
    "end": 214013,
    "score": 115,
    "start": 213325,
  },
  {
    "end": 214701,
    "score": 91,
    "start": 214013,
  },
  {
    "end": 215436,
    "score": 81,
    "start": 214701,
  },
  {
    "end": 216124,
    "score": 81,
    "start": 215436,
  },
  {
    "end": 216812,
    "score": 96,
    "start": 216124,
  },
  {
    "end": 217500,
    "score": 89,
    "start": 216812,
  },
  {
    "end": 218188,
    "score": 120,
    "start": 217500,
  },
  {
    "end": 218956,
    "score": 87,
    "start": 218188,
  },
  {
    "end": 219949,
    "score": 104,
    "start": 218956,
  },
  {
    "end": 220718,
    "score": 80,
    "start": 219949,
  },
  {
    "end": 221422,
    "score": 97,
    "start": 220718,
  },
  {
    "end": 222110,
    "score": 98,
    "start": 221422,
  },
  {
    "end": 222798,
    "score": 120,
    "start": 222110,
  },
  {
    "end": 223486,
    "score": 94,
    "start": 222798,
  },
  {
    "end": 224184,
    "score": 103,
    "start": 223486,
  },
  {
    "end": 225018,
    "score": 112,
    "start": 224184,
  },
  {
    "end": 225806,
    "score": 88,
    "start": 225018,
  },
  {
    "end": 226791,
    "score": 85,
    "start": 225806,
  },
  {
    "end": 227479,
    "score": 107,
    "start": 226791,
  },
  {
    "end": 228167,
    "score": 95,
    "start": 227479,
  },
  {
    "end": 228855,
    "score": 112,
    "start": 228167,
  },
  {
    "end": 229543,
    "score": 107,
    "start": 228855,
  },
  {
    "end": 230231,
    "score": 92,
    "start": 229543,
  },
  {
    "end": 230919,
    "score": 96,
    "start": 230231,
  },
  {
    "end": 231796,
    "score": 95,
    "start": 230919,
  },
  {
    "end": 232516,
    "score": 88,
    "start": 231796,
  },
  {
    "end": 233204,
    "score": 91,
    "start": 232516,
  },
  {
    "end": 233892,
    "score": 98,
    "start": 233204,
  },
  {
    "end": 234601,
    "score": 93,
    "start": 233892,
  },
  {
    "end": 235400,
    "score": 85,
    "start": 234601,
  },
  {
    "end": 236088,
    "score": 112,
    "start": 235400,
  },
  {
    "end": 236776,
    "score": 116,
    "start": 236088,
  },
  {
    "end": 237602,
    "score": 119,
    "start": 236776,
  },
  {
    "end": 238290,
    "score": 99,
    "start": 237602,
  },
  {
    "end": 239210,
    "score": 114,
    "start": 238290,
  },
  {
    "end": 240050,
    "score": 118,
    "start": 239210,
  },
  {
    "end": 241037,
    "score": 107,
    "start": 240050,
  },
  {
    "end": 241725,
    "score": 81,
    "start": 241037,
  },
  {
    "end": 242657,
    "score": 117,
    "start": 241725,
  },
  {
    "end": 243693,
    "score": 111,
    "start": 242657,
  },
  {
    "end": 244381,
    "score": 88,
    "start": 243693,
  },
  {
    "end": 245069,
    "score": 81,
    "start": 244381,
  },
  {
    "end": 245757,
    "score": 109,
    "start": 245069,
  },
  {
    "end": 246445,
    "score": 114,
    "start": 245757,
  },
  {
    "end": 247133,
    "score": 81,
    "start": 246445,
  },
  {
    "end": 247821,
    "score": 100,
    "start": 247133,
  },
  {
    "end": 248514,
    "score": 110,
    "start": 247821,
  },
  {
    "end": 249202,
    "score": 86,
    "start": 248514,
  },
  {
    "end": 249890,
    "score": 97,
    "start": 249202,
  },
  {
    "end": 250650,
    "score": 85,
    "start": 249890,
  },
  {
    "end": 251339,
    "score": 96,
    "start": 250650,
  },
  {
    "end": 252027,
    "score": 111,
    "start": 251339,
  },
  {
    "end": 252734,
    "score": 96,
    "start": 252027,
  },
  {
    "end": 253422,
    "score": 113,
    "start": 252734,
  },
  {
    "end": 254110,
    "score": 83,
    "start": 253422,
  },
  {
    "end": 254806,
    "score": 84,
    "start": 254110,
  },
  {
    "end": 255494,
    "score": 96,
    "start": 254806,
  },
  {
    "end": 256182,
    "score": 105,
    "start": 255494,
  },
  {
    "end": 256870,
    "score": 84,
    "start": 256182,
  },
  {
    "end": 257750,
    "score": 103,
    "start": 256870,
  },
  {
    "end": 258438,
    "score": 101,
    "start": 257750,
  },
  {
    "end": 259142,
    "score": 102,
    "start": 258438,
  },
  {
    "end": 259840,
    "score": 80,
    "start": 259142,
  },
  {
    "end": 260680,
    "score": 119,
    "start": 259840,
  },
  {
    "end": 261368,
    "score": 96,
    "start": 260680,
  },
  {
    "end": 263005,
    "score": 87,
    "start": 261368,
  },
  {
    "end": 263693,
    "score": 96,
    "start": 263005,
  },
  {
    "end": 264381,
    "score": 107,
    "start": 263693,
  },
  {
    "end": 265069,
    "score": 112,
    "start": 264381,
  },
  {
    "end": 265757,
    "score": 114,
    "start": 265069,
  },
  {
    "end": 266445,
    "score": 85,
    "start": 265757,
  },
  {
    "end": 267133,
    "score": 117,
    "start": 266445,
  },
  {
    "end": 267821,
    "score": 101,
    "start": 267133,
  },
  {
    "end": 268679,
    "score": 98,
    "start": 267821,
  },
  {
    "end": 269367,
    "score": 102,
    "start": 268679,
  },
  {
    "end": 270170,
    "score": 118,
    "start": 269367,
  },
  {
    "end": 270858,
    "score": 87,
    "start": 270170,
  },
  {
    "end": 271616,
    "score": 91,
    "start": 270858,
  },
  {
    "end": 272304,
    "score": 116,
    "start": 271616,
  },
  {
    "end": 272992,
    "score": 110,
    "start": 272304,
  },
  {
    "end": 273680,
    "score": 103,
    "start": 272992,
  },
  {
    "end": 274368,
    "score": 96,
    "start": 273680,
  },
  {
    "end": 275056,
    "score": 118,
    "start": 274368,
  },
  {
    "end": 275744,
    "score": 109,
    "start": 275056,
  },
  {
    "end": 276432,
    "score": 108,
    "start": 275744,
  },
  {
    "end": 277277,
    "score": 103,
    "start": 276432,
  },
  {
    "end": 277965,
    "score": 106,
    "start": 277277,
  },
  {
    "end": 278653,
    "score": 94,
    "start": 277965,
  },
  {
    "end": 279341,
    "score": 108,
    "start": 278653,
  },
  {
    "end": 280029,
    "score": 117,
    "start": 279341,
  },
  {
    "end": 280717,
    "score": 91,
    "start": 280029,
  },
  {
    "end": 281408,
    "score": 112,
    "start": 280717,
  },
  {
    "end": 282329,
    "score": 105,
    "start": 281408,
  },
  {
    "end": 283017,
    "score": 108,
    "start": 282329,
  },
  {
    "end": 283705,
    "score": 83,
    "start": 283017,
  },
  {
    "end": 284393,
    "score": 90,
    "start": 283705,
  },
  {
    "end": 285081,
    "score": 93,
    "start": 284393,
  },
  {
    "end": 285769,
    "score": 110,
    "start": 285081,
  },
  {
    "end": 286717,
    "score": 102,
    "start": 285769,
  },
  {
    "end": 287536,
    "score": 111,
    "start": 286717,
  },
  {
    "end": 288452,
    "score": 89,
    "start": 287536,
  },
  {
    "end": 289142,
    "score": 116,
    "start": 288452,
  },
  {
    "end": 289852,
    "score": 80,
    "start": 289142,
  },
  {
    "end": 290583,
    "score": 100,
    "start": 289852,
  },
  {
    "end": 291375,
    "score": 104,
    "start": 290583,
  },
  {
    "end": 292065,
    "score": 116,
    "start": 291375,
  },
  {
    "end": 292768,
    "score": 107,
    "start": 292065,
  },
  {
    "end": 293544,
    "score": 103,
    "start": 292768,
  },
  {
    "end": 294330,
    "score": 94,
    "start": 293544,
  },
  {
    "end": 295018,
    "score": 88,
    "start": 294330,
  },
  {
    "end": 295706,
    "score": 80,
    "start": 295018,
  },
  {
    "end": 296394,
    "score": 84,
    "start": 295706,
  },
  {
    "end": 297097,
    "score": 113,
    "start": 296394,
  },
  {
    "end": 298133,
    "score": 83,
    "start": 297097,
  },
  {
    "end": 298821,
    "score": 85,
    "start": 298133,
  },
  {
    "end": 299509,
    "score": 99,
    "start": 298821,
  },
  {
    "end": 300197,
    "score": 88,
    "start": 299509,
  },
  {
    "end": 300885,
    "score": 85,
    "start": 300197,
  },
  {
    "end": 301573,
    "score": 111,
    "start": 300885,
  },
  {
    "end": 303453,
    "score": 112,
    "start": 301573,
  },
  {
    "end": 305332,
    "score": 86,
    "start": 304317,
  },
  {
    "end": 306020,
    "score": 92,
    "start": 305332,
  },
  {
    "end": 306708,
    "score": 108,
    "start": 306020,
  },
  {
    "end": 307396,
    "score": 90,
    "start": 306708,
  },
  {
    "end": 308084,
    "score": 87,
    "start": 307396,
  },
  {
    "end": 308772,
    "score": 88,
    "start": 308084,
  },
  {
    "end": 309472,
    "score": 93,
    "start": 308772,
  },
  {
    "end": 310181,
    "score": 82,
    "start": 309472,
  },
  {
    "end": 311226,
    "score": 108,
    "start": 310525,
  },
  {
    "end": 311914,
    "score": 108,
    "start": 311226,
  },
  {
    "end": 312602,
    "score": 115,
    "start": 311914,
  },
  {
    "end": 313290,
    "score": 92,
    "start": 312602,
  },
  {
    "end": 313978,
    "score": 107,
    "start": 313290,
  },
  {
    "end": 314700,
    "score": 93,
    "start": 313978,
  },
  {
    "end": 315388,
    "score": 84,
    "start": 314700,
  },
  {
    "end": 316122,
    "score": 93,
    "start": 315388,
  },
  {
    "end": 316860,
    "score": 92,
    "start": 316122,
  },
  {
    "end": 317548,
    "score": 97,
    "start": 316860,
  },
  {
    "end": 318236,
    "score": 84,
    "start": 317548,
  },
  {
    "end": 318924,
    "score": 92,
    "start": 318236,
  },
  {
    "end": 319668,
    "score": 94,
    "start": 318924,
  },
  {
    "end": 320356,
    "score": 106,
    "start": 319668,
  },
  {
    "end": 321054,
    "score": 106,
    "start": 320356,
  },
  {
    "end": 321742,
    "score": 84,
    "start": 321054,
  },
  {
    "end": 322430,
    "score": 116,
    "start": 321742,
  },
  {
    "end": 323200,
    "score": 99,
    "start": 322430,
  },
  {
    "end": 323888,
    "score": 90,
    "start": 323200,
  },
  {
    "end": 324576,
    "score": 104,
    "start": 323888,
  },
  {
    "end": 325300,
    "score": 110,
    "start": 324576,
  },
  {
    "end": 325988,
    "score": 80,
    "start": 325300,
  },
  {
    "end": 326676,
    "score": 120,
    "start": 325988,
  },
  {
    "end": 327364,
    "score": 101,
    "start": 326676,
  },
  {
    "end": 328052,
    "score": 103,
    "start": 327364,
  },
  {
    "end": 328740,
    "score": 90,
    "start": 328052,
  },
  {
    "end": 329428,
    "score": 104,
    "start": 328740,
  },
  {
    "end": 330116,
    "score": 103,
    "start": 329428,
  },
  {
    "end": 330804,
    "score": 91,
    "start": 330116,
  },
  {
    "end": 331566,
    "score": 101,
    "start": 330804,
  },
  {
    "end": 332254,
    "score": 93,
    "start": 331566,
  },
  {
    "end": 332942,
    "score": 94,
    "start": 332254,
  },
  {
    "end": 333630,
    "score": 97,
    "start": 332942,
  },
  {
    "end": 334377,
    "score": 94,
    "start": 333630,
  },
  {
    "end": 335066,
    "score": 100,
    "start": 334377,
  },
  {
    "end": 335754,
    "score": 109,
    "start": 335066,
  },
  {
    "end": 336442,
    "score": 81,
    "start": 335754,
  },
  {
    "end": 337130,
    "score": 119,
    "start": 336442,
  },
  {
    "end": 338806,
    "score": 94,
    "start": 338118,
  },
  {
    "end": 339494,
    "score": 101,
    "start": 338806,
  },
  {
    "end": 340182,
    "score": 113,
    "start": 339494,
  },
  {
    "end": 340870,
    "score": 97,
    "start": 340182,
  },
  {
    "end": 341558,
    "score": 113,
    "start": 340870,
  },
  {
    "end": 342246,
    "score": 97,
    "start": 341558,
  },
  {
    "end": 342934,
    "score": 90,
    "start": 342246,
  },
  {
    "end": 343622,
    "score": 93,
    "start": 342934,
  },
  {
    "end": 344310,
    "score": 119,
    "start": 343622,
  },
  {
    "end": 345025,
    "score": 84,
    "start": 344310,
  },
  {
    "end": 345846,
    "score": 110,
    "start": 345025,
  },
  {
    "end": 346534,
    "score": 105,
    "start": 345846,
  },
  {
    "end": 347222,
    "score": 82,
    "start": 346534,
  },
  {
    "end": 347910,
    "score": 81,
    "start": 347222,
  },
  {
    "end": 348598,
    "score": 88,
    "start": 347910,
  },
  {
    "end": 349286,
    "score": 109,
    "start": 348598,
  },
  {
    "end": 349974,
    "score": 83,
    "start": 349286,
  },
  {
    "end": 350662,
    "score": 118,
    "start": 349974,
  },
  {
    "end": 351350,
    "score": 120,
    "start": 350662,
  },
  {
    "end": 352038,
    "score": 109,
    "start": 351350,
  },
  {
    "end": 352726,
    "score": 116,
    "start": 352038,
  },
  {
    "end": 353414,
    "score": 99,
    "start": 352726,
  },
  {
    "end": 354102,
    "score": 116,
    "start": 353414,
  },
  {
    "end": 354792,
    "score": 84,
    "start": 354102,
  },
  {
    "end": 355824,
    "score": 103,
    "start": 354792,
  },
  {
    "end": 356512,
    "score": 86,
    "start": 355824,
  },
  {
    "end": 357200,
    "score": 108,
    "start": 356512,
  },
  {
    "end": 357888,
    "score": 84,
    "start": 357200,
  },
  {
    "end": 358576,
    "score": 98,
    "start": 357888,
  },
  {
    "end": 359264,
    "score": 84,
    "start": 358576,
  },
  {
    "end": 360120,
    "score": 81,
    "start": 359264,
  },
  {
    "end": 361981,
    "score": 103,
    "start": 360120,
  },
  {
    "end": 362669,
    "score": 87,
    "start": 361981,
  },
  {
    "end": 363357,
    "score": 113,
    "start": 362669,
  },
  {
    "end": 364045,
    "score": 120,
    "start": 363357,
  },
  {
    "end": 364733,
    "score": 97,
    "start": 364045,
  },
  {
    "end": 365421,
    "score": 83,
    "start": 364733,
  },
  {
    "end": 366109,
    "score": 106,
    "start": 365421,
  },
  {
    "end": 366978,
    "score": 105,
    "start": 366109,
  },
  {
    "end": 367666,
    "score": 86,
    "start": 366978,
  },
  {
    "end": 368866,
    "score": 105,
    "start": 367666,
  },
  {
    "end": 370144,
    "score": 91,
    "start": 368866,
  },
  {
    "end": 371363,
    "score": 92,
    "start": 370144,
  },
  {
    "end": 372343,
    "score": 120,
    "start": 371363,
  },
  {
    "end": 373125,
    "score": 113,
    "start": 372343,
  },
  {
    "end": 373908,
    "score": 94,
    "start": 373125,
  },
  {
    "end": 374596,
    "score": 87,
    "start": 373908,
  },
  {
    "end": 375284,
    "score": 93,
    "start": 374596,
  },
  {
    "end": 375972,
    "score": 114,
    "start": 375284,
  },
  {
    "end": 376660,
    "score": 89,
    "start": 375972,
  },
  {
    "end": 377348,
    "score": 111,
    "start": 376660,
  },
  {
    "end": 378036,
    "score": 115,
    "start": 377348,
  },
  {
    "end": 378724,
    "score": 92,
    "start": 378036,
  },
  {
    "end": 379412,
    "score": 94,
    "start": 378724,
  },
  {
    "end": 380100,
    "score": 104,
    "start": 379412,
  },
  {
    "end": 380788,
    "score": 83,
    "start": 380100,
  },
  {
    "end": 381476,
    "score": 99,
    "start": 380788,
  },
  {
    "end": 382206,
    "score": 85,
    "start": 381476,
  },
  {
    "end": 382894,
    "score": 85,
    "start": 382206,
  },
  {
    "end": 383582,
    "score": 108,
    "start": 382894,
  },
  {
    "end": 384270,
    "score": 89,
    "start": 383582,
  },
  {
    "end": 384958,
    "score": 119,
    "start": 384270,
  },
  {
    "end": 385771,
    "score": 95,
    "start": 384958,
  },
  {
    "end": 386501,
    "score": 81,
    "start": 385771,
  },
  {
    "end": 387196,
    "score": 105,
    "start": 386501,
  },
  {
    "end": 387884,
    "score": 96,
    "start": 387196,
  },
  {
    "end": 388760,
    "score": 115,
    "start": 387884,
  },
  {
    "end": 389448,
    "score": 109,
    "start": 388760,
  },
  {
    "end": 390136,
    "score": 89,
    "start": 389448,
  },
  {
    "end": 390824,
    "score": 115,
    "start": 390136,
  },
  {
    "end": 391973,
    "score": 86,
    "start": 391168,
  },
  {
    "end": 392661,
    "score": 94,
    "start": 391973,
  },
  {
    "end": 393533,
    "score": 96,
    "start": 392661,
  },
  {
    "end": 394221,
    "score": 85,
    "start": 393533,
  },
  {
    "end": 394909,
    "score": 120,
    "start": 394221,
  },
  {
    "end": 395597,
    "score": 120,
    "start": 394909,
  },
  {
    "end": 396285,
    "score": 111,
    "start": 395597,
  },
  {
    "end": 396973,
    "score": 120,
    "start": 396285,
  },
  {
    "end": 397661,
    "score": 101,
    "start": 396973,
  },
  {
    "end": 398349,
    "score": 106,
    "start": 397661,
  },
  {
    "end": 399037,
    "score": 102,
    "start": 398349,
  },
  {
    "end": 399935,
    "score": 108,
    "start": 399037,
  },
  {
    "end": 400623,
    "score": 81,
    "start": 399935,
  },
  {
    "end": 401494,
    "score": 89,
    "start": 400623,
  },
  {
    "end": 402182,
    "score": 104,
    "start": 401494,
  },
  {
    "end": 402870,
    "score": 96,
    "start": 402182,
  },
  {
    "end": 403624,
    "score": 87,
    "start": 402870,
  },
  {
    "end": 404312,
    "score": 109,
    "start": 403624,
  },
  {
    "end": 405002,
    "score": 114,
    "start": 404312,
  },
  {
    "end": 405690,
    "score": 86,
    "start": 405002,
  },
  {
    "end": 406378,
    "score": 80,
    "start": 405690,
  },
  {
    "end": 407066,
    "score": 107,
    "start": 406378,
  },
  {
    "end": 407754,
    "score": 96,
    "start": 407066,
  },
  {
    "end": 408442,
    "score": 94,
    "start": 407754,
  },
  {
    "end": 409130,
    "score": 116,
    "start": 408442,
  },
  {
    "end": 409818,
    "score": 105,
    "start": 409130,
  },
  {
    "end": 410506,
    "score": 89,
    "start": 409818,
  },
  {
    "end": 411194,
    "score": 109,
    "start": 410506,
  },
  {
    "end": 411882,
    "score": 120,
    "start": 411194,
  },
  {
    "end": 412570,
    "score": 93,
    "start": 411882,
  },
  {
    "end": 413258,
    "score": 105,
    "start": 412570,
  },
  {
    "end": 413946,
    "score": 83,
    "start": 413258,
  },
  {
    "end": 414634,
    "score": 92,
    "start": 413946,
  },
  {
    "end": 415322,
    "score": 95,
    "start": 414634,
  },
  {
    "end": 416010,
    "score": 96,
    "start": 415322,
  },
  {
    "end": 416698,
    "score": 106,
    "start": 416010,
  },
  {
    "end": 417405,
    "score": 106,
    "start": 416698,
  },
  {
    "end": 418118,
    "score": 116,
    "start": 417405,
  },
  {
    "end": 418806,
    "score": 91,
    "start": 418118,
  },
  {
    "end": 419494,
    "score": 88,
    "start": 418806,
  },
  {
    "end": 420182,
    "score": 82,
    "start": 419494,
  },
  {
    "end": 420870,
    "score": 112,
    "start": 420182,
  },
  {
    "end": 421638,
    "score": 98,
    "start": 420870,
  },
  {
    "end": 422326,
    "score": 98,
    "start": 421638,
  },
  {
    "end": 423014,
    "score": 99,
    "start": 422326,
  },
  {
    "end": 423702,
    "score": 84,
    "start": 423014,
  },
  {
    "end": 424390,
    "score": 116,
    "start": 423702,
  },
  {
    "end": 425078,
    "score": 93,
    "start": 424390,
  },
  {
    "end": 425766,
    "score": 82,
    "start": 425078,
  },
  {
    "end": 426454,
    "score": 93,
    "start": 425766,
  },
  {
    "end": 427142,
    "score": 88,
    "start": 426454,
  },
  {
    "end": 427830,
    "score": 98,
    "start": 427142,
  },
  {
    "end": 428518,
    "score": 93,
    "start": 427830,
  },
  {
    "end": 429206,
    "score": 105,
    "start": 428518,
  },
  {
    "end": 429992,
    "score": 109,
    "start": 429206,
  },
  {
    "end": 430680,
    "score": 106,
    "start": 429992,
  },
  {
    "end": 431368,
    "score": 112,
    "start": 430680,
  },
  {
    "end": 432056,
    "score": 101,
    "start": 431368,
  },
  {
    "end": 432744,
    "score": 106,
    "start": 432056,
  },
  {
    "end": 433432,
    "score": 98,
    "start": 432744,
  },
  {
    "end": 434290,
    "score": 88,
    "start": 433432,
  },
  {
    "end": 434978,
    "score": 113,
    "start": 434290,
  },
  {
    "end": 435666,
    "score": 116,
    "start": 434978,
  },
  {
    "end": 436354,
    "score": 88,
    "start": 435666,
  },
  {
    "end": 437042,
    "score": 109,
    "start": 436354,
  },
  {
    "end": 437730,
    "score": 119,
    "start": 437042,
  },
  {
    "end": 438418,
    "score": 101,
    "start": 437730,
  },
  {
    "end": 439137,
    "score": 97,
    "start": 438418,
  },
  {
    "end": 439902,
    "score": 80,
    "start": 439137,
  },
  {
    "end": 440882,
    "score": 110,
    "start": 439902,
  },
  {
    "end": 441962,
    "score": 96,
    "start": 440882,
  },
  {
    "end": 442824,
    "score": 98,
    "start": 441962,
  },
  {
    "end": 443755,
    "score": 95,
    "start": 442824,
  },
  {
    "end": 444729,
    "score": 100,
    "start": 443755,
  },
  {
    "end": 445611,
    "score": 88,
    "start": 444729,
  },
  {
    "end": 446489,
    "score": 98,
    "start": 445611,
  },
  {
    "end": 447319,
    "score": 82,
    "start": 446489,
  },
  {
    "end": 448067,
    "score": 86,
    "start": 447319,
  },
  {
    "end": 448755,
    "score": 109,
    "start": 448067,
  },
  {
    "end": 449487,
    "score": 106,
    "start": 448755,
  },
  {
    "end": 450181,
    "score": 84,
    "start": 449487,
  },
  {
    "end": 450869,
    "score": 104,
    "start": 450181,
  },
  {
    "end": 451557,
    "score": 112,
    "start": 450869,
  },
  {
    "end": 452245,
    "score": 103,
    "start": 451557,
  },
  {
    "end": 452933,
    "score": 86,
    "start": 452245,
  },
  {
    "end": 453621,
    "score": 89,
    "start": 452933,
  },
  {
    "end": 454443,
    "score": 83,
    "start": 453621,
  },
  {
    "end": 455131,
    "score": 114,
    "start": 454443,
  },
  {
    "end": 455848,
    "score": 116,
    "start": 455131,
  },
  {
    "end": 456536,
    "score": 111,
    "start": 455848,
  },
  {
    "end": 457224,
    "score": 83,
    "start": 456536,
  },
  {
    "end": 457962,
    "score": 97,
    "start": 457224,
  },
  {
    "end": 458650,
    "score": 108,
    "start": 457962,
  },
  {
    "end": 459338,
    "score": 114,
    "start": 458650,
  },
  {
    "end": 460026,
    "score": 98,
    "start": 459338,
  },
  {
    "end": 460714,
    "score": 109,
    "start": 460026,
  },
  {
    "end": 461402,
    "score": 112,
    "start": 460714,
  },
  {
    "end": 462090,
    "score": 119,
    "start": 461402,
  },
  {
    "end": 462778,
    "score": 84,
    "start": 462090,
  },
  {
    "end": 463466,
    "score": 98,
    "start": 462778,
  },
  {
    "end": 464154,
    "score": 91,
    "start": 463466,
  },
  {
    "end": 465050,
    "score": 96,
    "start": 464154,
  },
  {
    "end": 465738,
    "score": 112,
    "start": 465050,
  },
  {
    "end": 466426,
    "score": 101,
    "start": 465738,
  },
  {
    "end": 467114,
    "score": 99,
    "start": 466426,
  },
  {
    "end": 467858,
    "score": 116,
    "start": 467114,
  },
  {
    "end": 468554,
    "score": 114,
    "start": 467858,
  },
  {
    "end": 469267,
    "score": 92,
    "start": 468554,
  },
  {
    "end": 469955,
    "score": 111,
    "start": 469267,
  },
  {
    "end": 470762,
    "score": 99,
    "start": 469955,
  },
  {
    "end": 471467,
    "score": 106,
    "start": 470762,
  },
  {
    "end": 472323,
    "score": 90,
    "start": 471467,
  },
  {
    "end": 473048,
    "score": 117,
    "start": 472323,
  },
  {
    "end": 473740,
    "score": 116,
    "start": 473048,
  },
  {
    "end": 474428,
    "score": 110,
    "start": 473740,
  },
  {
    "end": 475116,
    "score": 96,
    "start": 474428,
  },
  {
    "end": 476004,
    "score": 90,
    "start": 475116,
  },
  {
    "end": 476692,
    "score": 95,
    "start": 476004,
  },
  {
    "end": 477380,
    "score": 119,
    "start": 476692,
  },
  {
    "end": 478076,
    "score": 82,
    "start": 477380,
  },
  {
    "end": 479331,
    "score": 83,
    "start": 478076,
  },
  {
    "end": 480429,
    "score": 99,
    "start": 479331,
  },
  {
    "end": 481117,
    "score": 112,
    "start": 480429,
  },
  {
    "end": 481805,
    "score": 90,
    "start": 481117,
  },
  {
    "end": 482493,
    "score": 106,
    "start": 481805,
  },
  {
    "end": 484246,
    "score": 84,
    "start": 483558,
  },
  {
    "end": 484934,
    "score": 109,
    "start": 484246,
  },
  {
    "end": 485622,
    "score": 101,
    "start": 484934,
  },
  {
    "end": 486419,
    "score": 107,
    "start": 485622,
  },
  {
    "end": 487107,
    "score": 85,
    "start": 486419,
  },
  {
    "end": 487795,
    "score": 108,
    "start": 487107,
  },
  {
    "end": 488483,
    "score": 101,
    "start": 487795,
  },
  {
    "end": 489171,
    "score": 97,
    "start": 488483,
  },
  {
    "end": 489859,
    "score": 80,
    "start": 489171,
  },
  {
    "end": 490551,
    "score": 101,
    "start": 489859,
  },
  {
    "end": 491260,
    "score": 88,
    "start": 490551,
  },
  {
    "end": 491948,
    "score": 117,
    "start": 491260,
  },
  {
    "end": 492636,
    "score": 115,
    "start": 491948,
  },
  {
    "end": 493324,
    "score": 104,
    "start": 492636,
  },
  {
    "end": 494012,
    "score": 120,
    "start": 493324,
  },
  {
    "end": 494700,
    "score": 82,
    "start": 494012,
  },
  {
    "end": 495519,
    "score": 87,
    "start": 494700,
  },
  {
    "end": 496207,
    "score": 109,
    "start": 495519,
  },
  {
    "end": 496895,
    "score": 88,
    "start": 496207,
  },
  {
    "end": 497583,
    "score": 81,
    "start": 496895,
  },
  {
    "end": 498271,
    "score": 82,
    "start": 497583,
  },
  {
    "end": 498959,
    "score": 87,
    "start": 498271,
  },
  {
    "end": 499647,
    "score": 102,
    "start": 498959,
  },
  {
    "end": 500335,
    "score": 120,
    "start": 499647,
  },
  {
    "end": 501023,
    "score": 110,
    "start": 500335,
  },
  {
    "end": 501719,
    "score": 82,
    "start": 501023,
  },
  {
    "end": 502407,
    "score": 80,
    "start": 501719,
  },
  {
    "end": 503193,
    "score": 115,
    "start": 502407,
  },
  {
    "end": 503963,
    "score": 119,
    "start": 503193,
  },
  {
    "end": 504651,
    "score": 113,
    "start": 503963,
  },
  {
    "end": 505339,
    "score": 100,
    "start": 504651,
  },
  {
    "end": 506082,
    "score": 95,
    "start": 505339,
  },
  {
    "end": 507184,
    "score": 88,
    "start": 506082,
  },
  {
    "end": 508263,
    "score": 85,
    "start": 507184,
  },
  {
    "end": 509185,
    "score": 90,
    "start": 508263,
  },
  {
    "end": 510342,
    "score": 94,
    "start": 509185,
  },
  {
    "end": 511034,
    "score": 114,
    "start": 510342,
  },
  {
    "end": 511722,
    "score": 111,
    "start": 511034,
  },
  {
    "end": 512410,
    "score": 97,
    "start": 511722,
  },
  {
    "end": 513098,
    "score": 82,
    "start": 512410,
  },
  {
    "end": 513786,
    "score": 107,
    "start": 513098,
  },
  {
    "end": 514474,
    "score": 116,
    "start": 513786,
  },
  {
    "end": 515162,
    "score": 108,
    "start": 514474,
  },
  {
    "end": 516033,
    "score": 83,
    "start": 515162,
  },
  {
    "end": 516721,
    "score": 83,
    "start": 516033,
  },
  {
    "end": 517433,
    "score": 91,
    "start": 516721,
  },
  {
    "end": 518288,
    "score": 81,
    "start": 517433,
  },
  {
    "end": 518976,
    "score": 83,
    "start": 518288,
  },
  {
    "end": 519664,
    "score": 86,
    "start": 518976,
  },
  {
    "end": 520980,
    "score": 85,
    "start": 520290,
  },
  {
    "end": 521668,
    "score": 117,
    "start": 520980,
  },
  {
    "end": 522356,
    "score": 106,
    "start": 521668,
  },
  {
    "end": 523044,
    "score": 81,
    "start": 522356,
  },
  {
    "end": 523732,
    "score": 91,
    "start": 523044,
  },
  {
    "end": 524420,
    "score": 103,
    "start": 523732,
  },
  {
    "end": 525108,
    "score": 102,
    "start": 524420,
  },
  {
    "end": 525796,
    "score": 87,
    "start": 525108,
  },
  {
    "end": 526484,
    "score": 112,
    "start": 525796,
  },
  {
    "end": 527172,
    "score": 112,
    "start": 526484,
  },
  {
    "end": 528089,
    "score": 84,
    "start": 527172,
  },
  {
    "end": 528777,
    "score": 118,
    "start": 528089,
  },
  {
    "end": 529538,
    "score": 104,
    "start": 528777,
  },
  {
    "end": 530516,
    "score": 97,
    "start": 529538,
  },
  {
    "end": 531214,
    "score": 118,
    "start": 530516,
  },
  {
    "end": 531928,
    "score": 105,
    "start": 531214,
  },
  {
    "end": 532621,
    "score": 95,
    "start": 531928,
  },
  {
    "end": 533472,
    "score": 88,
    "start": 532621,
  },
  {
    "end": 534181,
    "score": 85,
    "start": 533472,
  },
  {
    "end": 534869,
    "score": 96,
    "start": 534181,
  },
  {
    "end": 536087,
    "score": 90,
    "start": 535213,
  },
  {
    "end": 536778,
    "score": 119,
    "start": 536087,
  },
  {
    "end": 537468,
    "score": 93,
    "start": 536778,
  },
  {
    "end": 538156,
    "score": 106,
    "start": 537468,
  },
  {
    "end": 538844,
    "score": 120,
    "start": 538156,
  },
  {
    "end": 539532,
    "score": 80,
    "start": 538844,
  },
  {
    "end": 540220,
    "score": 80,
    "start": 539532,
  },
  {
    "end": 540914,
    "score": 119,
    "start": 540220,
  },
  {
    "end": 541608,
    "score": 94,
    "start": 540914,
  },
  {
    "end": 542296,
    "score": 101,
    "start": 541608,
  },
  {
    "end": 542984,
    "score": 80,
    "start": 542296,
  },
  {
    "end": 543672,
    "score": 96,
    "start": 542984,
  },
  {
    "end": 544360,
    "score": 112,
    "start": 543672,
  },
  {
    "end": 545048,
    "score": 100,
    "start": 544360,
  },
  {
    "end": 545758,
    "score": 100,
    "start": 545048,
  },
  {
    "end": 546446,
    "score": 92,
    "start": 545758,
  },
  {
    "end": 547134,
    "score": 106,
    "start": 546446,
  },
  {
    "end": 547822,
    "score": 109,
    "start": 547134,
  },
  {
    "end": 548510,
    "score": 111,
    "start": 547822,
  },
  {
    "end": 549276,
    "score": 115,
    "start": 548510,
  },
  {
    "end": 550011,
    "score": 113,
    "start": 549276,
  },
  {
    "end": 550699,
    "score": 117,
    "start": 550011,
  },
  {
    "end": 551390,
    "score": 87,
    "start": 550699,
  },
  {
    "end": 552091,
    "score": 107,
    "start": 551390,
  },
  {
    "end": 552779,
    "score": 98,
    "start": 552091,
  },
  {
    "end": 553467,
    "score": 108,
    "start": 552779,
  },
  {
    "end": 554155,
    "score": 85,
    "start": 553467,
  },
  {
    "end": 554843,
    "score": 95,
    "start": 554155,
  },
  {
    "end": 555531,
    "score": 102,
    "start": 554843,
  },
  {
    "end": 556258,
    "score": 82,
    "start": 555531,
  },
  {
    "end": 556946,
    "score": 105,
    "start": 556258,
  },
  {
    "end": 557634,
    "score": 109,
    "start": 556946,
  },
  {
    "end": 558322,
    "score": 99,
    "start": 557634,
  },
  {
    "end": 559163,
    "score": 109,
    "start": 558322,
  },
  {
    "end": 559851,
    "score": 101,
    "start": 559163,
  },
  {
    "end": 560539,
    "score": 90,
    "start": 559851,
  },
  {
    "end": 561227,
    "score": 82,
    "start": 560539,
  },
  {
    "end": 561915,
    "score": 112,
    "start": 561227,
  },
  {
    "end": 562837,
    "score": 115,
    "start": 561915,
  },
  {
    "end": 564213,
    "score": 83,
    "start": 563525,
  },
  {
    "end": 564901,
    "score": 111,
    "start": 564213,
  },
  {
    "end": 565589,
    "score": 91,
    "start": 564901,
  },
  {
    "end": 566277,
    "score": 101,
    "start": 565589,
  },
  {
    "end": 567086,
    "score": 104,
    "start": 566277,
  },
  {
    "end": 567774,
    "score": 99,
    "start": 567086,
  },
  {
    "end": 568462,
    "score": 116,
    "start": 567774,
  },
  {
    "end": 569150,
    "score": 89,
    "start": 568462,
  },
  {
    "end": 569838,
    "score": 114,
    "start": 569150,
  },
  {
    "end": 570526,
    "score": 87,
    "start": 569838,
  },
  {
    "end": 577661,
    "score": 91,
    "start": 571318,
  },
  {
    "end": 589428,
    "score": 97,
    "start": 578597,
  },
  {
    "end": 594037,
    "score": 107,
    "start": 592813,
  },
  {
    "end": 615128,
    "score": 95,
    "start": 608717,
  },
  {
    "end": 619087,
    "score": 86,
    "start": 617766,
  },
  {
    "end": 621992,
    "score": 120,
    "start": 621086,
  },
  {
    "end": 622698,
    "score": 102,
    "start": 621992,
  },
  {
    "end": 623386,
    "score": 113,
    "start": 622698,
  },
  {
    "end": 624074,
    "score": 83,
    "start": 623386,
  },
  {
    "end": 624778,
    "score": 102,
    "start": 624074,
  },
  {
    "end": 625466,
    "score": 102,
    "start": 624778,
  },
  {
    "end": 626154,
    "score": 82,
    "start": 625466,
  },
  {
    "end": 626842,
    "score": 90,
    "start": 626154,
  },
  {
    "end": 627545,
    "score": 102,
    "start": 626842,
  },
  {
    "end": 628233,
    "score": 98,
    "start": 627545,
  },
  {
    "end": 628921,
    "score": 115,
    "start": 628233,
  },
  {
    "end": 629609,
    "score": 109,
    "start": 628921,
  },
  {
    "end": 630297,
    "score": 99,
    "start": 629609,
  },
  {
    "end": 631052,
    "score": 96,
    "start": 630297,
  },
  {
    "end": 631740,
    "score": 82,
    "start": 631052,
  },
  {
    "end": 632428,
    "score": 105,
    "start": 631740,
  },
  {
    "end": 633116,
    "score": 85,
    "start": 632428,
  },
  {
    "end": 633804,
    "score": 86,
    "start": 633116,
  },
  {
    "end": 634492,
    "score": 106,
    "start": 633804,
  },
  {
    "end": 635217,
    "score": 115,
    "start": 634492,
  },
  {
    "end": 635905,
    "score": 80,
    "start": 635217,
  },
  {
    "end": 636593,
    "score": 93,
    "start": 635905,
  },
  {
    "end": 637281,
    "score": 91,
    "start": 636593,
  },
  {
    "end": 637969,
    "score": 81,
    "start": 637281,
  },
  {
    "end": 638657,
    "score": 112,
    "start": 637969,
  },
  {
    "end": 639345,
    "score": 83,
    "start": 638657,
  },
  {
    "end": 640033,
    "score": 87,
    "start": 639345,
  },
  {
    "end": 640757,
    "score": 109,
    "start": 640033,
  },
  {
    "end": 641445,
    "score": 111,
    "start": 640757,
  },
  {
    "end": 642133,
    "score": 80,
    "start": 641445,
  },
  {
    "end": 642821,
    "score": 103,
    "start": 642133,
  },
  {
    "end": 643509,
    "score": 91,
    "start": 642821,
  },
  {
    "end": 644206,
    "score": 96,
    "start": 643509,
  },
  {
    "end": 644894,
    "score": 104,
    "start": 644206,
  },
  {
    "end": 645719,
    "score": 95,
    "start": 644894,
  },
  {
    "end": 646430,
    "score": 83,
    "start": 645719,
  },
  {
    "end": 647119,
    "score": 88,
    "start": 646430,
  },
  {
    "end": 647962,
    "score": 105,
    "start": 647119,
  },
  {
    "end": 648650,
    "score": 120,
    "start": 647962,
  },
  {
    "end": 649338,
    "score": 120,
    "start": 648650,
  },
  {
    "end": 650026,
    "score": 101,
    "start": 649338,
  },
  {
    "end": 650714,
    "score": 105,
    "start": 650026,
  },
  {
    "end": 651402,
    "score": 113,
    "start": 650714,
  },
  {
    "end": 652090,
    "score": 92,
    "start": 651402,
  },
  {
    "end": 652934,
    "score": 108,
    "start": 652090,
  },
  {
    "end": 654987,
    "score": 116,
    "start": 653784,
  },
  {
    "end": 655675,
    "score": 91,
    "start": 654987,
  },
  {
    "end": 656363,
    "score": 114,
    "start": 655675,
  },
  {
    "end": 657061,
    "score": 90,
    "start": 656363,
  },
  {
    "end": 657749,
    "score": 95,
    "start": 657061,
  },
  {
    "end": 658437,
    "score": 108,
    "start": 657749,
  },
  {
    "end": 659125,
    "score": 82,
    "start": 658437,
  },
  {
    "end": 659855,
    "score": 93,
    "start": 659125,
  },
  {
    "end": 660553,
    "score": 100,
    "start": 659855,
  },
  {
    "end": 661264,
    "score": 100,
    "start": 660553,
  },
  {
    "end": 661952,
    "score": 80,
    "start": 661264,
  },
  {
    "end": 662640,
    "score": 119,
    "start": 661952,
  },
  {
    "end": 663487,
    "score": 119,
    "start": 662640,
  },
  {
    "end": 664432,
    "score": 118,
    "start": 663487,
  },
  {
    "end": 665120,
    "score": 118,
    "start": 664432,
  },
  {
    "end": 665808,
    "score": 92,
    "start": 665120,
  },
  {
    "end": 666496,
    "score": 116,
    "start": 665808,
  },
  {
    "end": 667184,
    "score": 98,
    "start": 666496,
  },
  {
    "end": 667872,
    "score": 119,
    "start": 667184,
  },
  {
    "end": 668560,
    "score": 100,
    "start": 667872,
  },
  {
    "end": 669248,
    "score": 115,
    "start": 668560,
  },
  {
    "end": 669936,
    "score": 95,
    "start": 669248,
  },
  {
    "end": 670677,
    "score": 81,
    "start": 669936,
  },
  {
    "end": 671365,
    "score": 109,
    "start": 670677,
  },
  {
    "end": 672053,
    "score": 103,
    "start": 671365,
  },
  {
    "end": 672896,
    "score": 98,
    "start": 672053,
  },
  {
    "end": 673587,
    "score": 95,
    "start": 672896,
  },
  {
    "end": 674277,
    "score": 106,
    "start": 673587,
  },
  {
    "end": 674972,
    "score": 108,
    "start": 674277,
  },
  {
    "end": 675660,
    "score": 94,
    "start": 674972,
  },
  {
    "end": 676348,
    "score": 93,
    "start": 675660,
  },
  {
    "end": 677036,
    "score": 85,
    "start": 676348,
  },
  {
    "end": 677724,
    "score": 100,
    "start": 677036,
  },
  {
    "end": 678412,
    "score": 102,
    "start": 677724,
  },
  {
    "end": 679140,
    "score": 87,
    "start": 678412,
  },
  {
    "end": 679828,
    "score": 82,
    "start": 679140,
  },
  {
    "end": 680516,
    "score": 108,
    "start": 679828,
  },
  {
    "end": 681234,
    "score": 86,
    "start": 680516,
  },
  {
    "end": 681922,
    "score": 109,
    "start": 681234,
  },
  {
    "end": 682610,
    "score": 101,
    "start": 681922,
  },
  {
    "end": 683298,
    "score": 103,
    "start": 682610,
  },
  {
    "end": 683986,
    "score": 108,
    "start": 683298,
  },
  {
    "end": 684674,
    "score": 103,
    "start": 683986,
  },
  {
    "end": 685362,
    "score": 106,
    "start": 684674,
  },
  {
    "end": 686050,
    "score": 114,
    "start": 685362,
  },
  {
    "end": 686738,
    "score": 106,
    "start": 686050,
  },
  {
    "end": 687543,
    "score": 112,
    "start": 686738,
  },
  {
    "end": 688244,
    "score": 109,
    "start": 687543,
  },
  {
    "end": 688932,
    "score": 102,
    "start": 688244,
  },
  {
    "end": 689620,
    "score": 103,
    "start": 688932,
  },
  {
    "end": 690308,
    "score": 102,
    "start": 689620,
  },
  {
    "end": 690998,
    "score": 119,
    "start": 690308,
  },
  {
    "end": 691686,
    "score": 85,
    "start": 690998,
  },
  {
    "end": 692387,
    "score": 111,
    "start": 691686,
  },
  {
    "end": 693218,
    "score": 105,
    "start": 692387,
  },
  {
    "end": 693918,
    "score": 86,
    "start": 693218,
  },
  {
    "end": 694659,
    "score": 96,
    "start": 693918,
  },
  {
    "end": 695548,
    "score": 100,
    "start": 694659,
  },
  {
    "end": 696469,
    "score": 80,
    "start": 695548,
  },
  {
    "end": 697277,
    "score": 99,
    "start": 696469,
  },
  {
    "end": 699615,
    "score": 113,
    "start": 698823,
  },
  {
    "end": 700377,
    "score": 103,
    "start": 699615,
  },
  {
    "end": 701071,
    "score": 83,
    "start": 700377,
  },
  {
    "end": 701769,
    "score": 117,
    "start": 701071,
  },
  {
    "end": 702474,
    "score": 83,
    "start": 701769,
  },
  {
    "end": 703162,
    "score": 82,
    "start": 702474,
  },
  {
    "end": 703850,
    "score": 114,
    "start": 703162,
  },
  {
    "end": 704538,
    "score": 80,
    "start": 703850,
  },
  {
    "end": 705226,
    "score": 98,
    "start": 704538,
  },
  {
    "end": 706012,
    "score": 89,
    "start": 705226,
  },
  {
    "end": 706700,
    "score": 89,
    "start": 706012,
  },
  {
    "end": 707388,
    "score": 98,
    "start": 706700,
  },
  {
    "end": 708076,
    "score": 107,
    "start": 707388,
  },
  {
    "end": 708831,
    "score": 88,
    "start": 708076,
  },
  {
    "end": 709617,
    "score": 97,
    "start": 708831,
  },
  {
    "end": 710322,
    "score": 104,
    "start": 709617,
  },
  {
    "end": 711010,
    "score": 94,
    "start": 710322,
  },
  {
    "end": 711764,
    "score": 101,
    "start": 711010,
  },
  {
    "end": 712455,
    "score": 105,
    "start": 711764,
  },
  {
    "end": 713143,
    "score": 80,
    "start": 712455,
  },
  {
    "end": 713831,
    "score": 115,
    "start": 713143,
  },
  {
    "end": 714555,
    "score": 81,
    "start": 713831,
  },
  {
    "end": 715243,
    "score": 92,
    "start": 714555,
  },
  {
    "end": 715931,
    "score": 86,
    "start": 715243,
  },
  {
    "end": 716619,
    "score": 85,
    "start": 715931,
  },
  {
    "end": 717307,
    "score": 114,
    "start": 716619,
  },
  {
    "end": 718144,
    "score": 120,
    "start": 717307,
  },
  {
    "end": 719411,
    "score": 118,
    "start": 718144,
  },
  {
    "end": 720104,
    "score": 105,
    "start": 719411,
  },
  {
    "end": 720947,
    "score": 89,
    "start": 720104,
  },
  {
    "end": 721635,
    "score": 97,
    "start": 720947,
  },
  {
    "end": 722323,
    "score": 81,
    "start": 721635,
  },
  {
    "end": 723013,
    "score": 91,
    "start": 722323,
  },
  {
    "end": 723701,
    "score": 98,
    "start": 723013,
  },
  {
    "end": 724794,
    "score": 100,
    "start": 724052,
  },
  {
    "end": 725483,
    "score": 117,
    "start": 724794,
  },
  {
    "end": 726171,
    "score": 96,
    "start": 725483,
  },
  {
    "end": 727029,
    "score": 114,
    "start": 726171,
  },
  {
    "end": 727717,
    "score": 116,
    "start": 727029,
  },
  {
    "end": 728405,
    "score": 84,
    "start": 727717,
  },
  {
    "end": 729093,
    "score": 111,
    "start": 728405,
  },
  {
    "end": 729781,
    "score": 82,
    "start": 729093,
  },
  {
    "end": 730702,
    "score": 118,
    "start": 729781,
  },
  {
    "end": 731390,
    "score": 100,
    "start": 730702,
  },
  {
    "end": 732078,
    "score": 101,
    "start": 731390,
  },
  {
    "end": 732919,
    "score": 104,
    "start": 732078,
  },
  {
    "end": 733607,
    "score": 109,
    "start": 732919,
  },
  {
    "end": 734316,
    "score": 112,
    "start": 733607,
  },
  {
    "end": 735014,
    "score": 84,
    "start": 734316,
  },
  {
    "end": 735702,
    "score": 119,
    "start": 735014,
  },
  {
    "end": 736390,
    "score": 85,
    "start": 735702,
  },
  {
    "end": 737078,
    "score": 87,
    "start": 736390,
  },
  {
    "end": 737766,
    "score": 89,
    "start": 737078,
  },
  {
    "end": 738463,
    "score": 80,
    "start": 737766,
  },
  {
    "end": 739151,
    "score": 81,
    "start": 738463,
  },
  {
    "end": 739853,
    "score": 108,
    "start": 739151,
  },
  {
    "end": 740541,
    "score": 88,
    "start": 739853,
  },
  {
    "end": 741230,
    "score": 89,
    "start": 740541,
  },
  {
    "end": 741918,
    "score": 101,
    "start": 741230,
  },
  {
    "end": 742606,
    "score": 102,
    "start": 741918,
  },
  {
    "end": 743294,
    "score": 91,
    "start": 742606,
  },
  {
    "end": 743982,
    "score": 107,
    "start": 743294,
  },
  {
    "end": 744670,
    "score": 119,
    "start": 743982,
  },
  {
    "end": 745420,
    "score": 87,
    "start": 744670,
  },
  {
    "end": 746108,
    "score": 115,
    "start": 745420,
  },
  {
    "end": 746796,
    "score": 102,
    "start": 746108,
  },
  {
    "end": 747484,
    "score": 119,
    "start": 746796,
  },
  {
    "end": 748172,
    "score": 104,
    "start": 747484,
  },
  {
    "end": 748860,
    "score": 90,
    "start": 748172,
  },
  {
    "end": 749548,
    "score": 109,
    "start": 748860,
  },
  {
    "end": 750236,
    "score": 119,
    "start": 749548,
  },
  {
    "end": 750924,
    "score": 95,
    "start": 750236,
  },
  {
    "end": 751612,
    "score": 106,
    "start": 750924,
  },
  {
    "end": 752303,
    "score": 81,
    "start": 751612,
  },
  {
    "end": 753097,
    "score": 97,
    "start": 752303,
  },
  {
    "end": 753801,
    "score": 88,
    "start": 753097,
  },
  {
    "end": 754764,
    "score": 83,
    "start": 753801,
  },
  {
    "end": 755470,
    "score": 105,
    "start": 754764,
  },
  {
    "end": 756188,
    "score": 94,
    "start": 755470,
  },
  {
    "end": 757063,
    "score": 114,
    "start": 756188,
  },
  {
    "end": 757753,
    "score": 99,
    "start": 757063,
  },
  {
    "end": 758441,
    "score": 118,
    "start": 757753,
  },
  {
    "end": 759129,
    "score": 94,
    "start": 758441,
  },
  {
    "end": 759817,
    "score": 117,
    "start": 759129,
  },
  {
    "end": 763687,
    "score": 84,
    "start": 762999,
  },
  {
    "end": 764375,
    "score": 99,
    "start": 763687,
  },
  {
    "end": 765087,
    "score": 88,
    "start": 764375,
  },
  {
    "end": 765778,
    "score": 120,
    "start": 765087,
  },
  {
    "end": 766621,
    "score": 90,
    "start": 765778,
  },
  {
    "end": 767309,
    "score": 116,
    "start": 766621,
  },
  {
    "end": 767997,
    "score": 119,
    "start": 767309,
  },
  {
    "end": 768685,
    "score": 91,
    "start": 767997,
  },
  {
    "end": 769373,
    "score": 113,
    "start": 768685,
  },
  {
    "end": 770061,
    "score": 87,
    "start": 769373,
  },
  {
    "end": 770749,
    "score": 92,
    "start": 770061,
  },
  {
    "end": 771437,
    "score": 107,
    "start": 770749,
  },
  {
    "end": 772125,
    "score": 94,
    "start": 771437,
  },
  {
    "end": 774020,
    "score": 100,
    "start": 772125,
  },
  {
    "end": 774708,
    "score": 103,
    "start": 774020,
  },
  {
    "end": 775396,
    "score": 92,
    "start": 774708,
  },
  {
    "end": 776084,
    "score": 120,
    "start": 775396,
  },
  {
    "end": 776772,
    "score": 85,
    "start": 776084,
  },
  {
    "end": 777460,
    "score": 120,
    "start": 776772,
  },
  {
    "end": 778148,
    "score": 92,
    "start": 777460,
  },
  {
    "end": 778836,
    "score": 82,
    "start": 778148,
  },
  {
    "end": 779741,
    "score": 87,
    "start": 778836,
  },
  {
    "end": 780432,
    "score": 88,
    "start": 779741,
  },
  {
    "end": 781120,
    "score": 88,
    "start": 780432,
  },
  {
    "end": 781823,
    "score": 107,
    "start": 781120,
  },
  {
    "end": 782777,
    "score": 117,
    "start": 781823,
  },
  {
    "end": 783465,
    "score": 107,
    "start": 782777,
  },
  {
    "end": 784364,
    "score": 88,
    "start": 783465,
  },
  {
    "end": 785583,
    "score": 94,
    "start": 784364,
  },
  {
    "end": 786271,
    "score": 83,
    "start": 785583,
  },
  {
    "end": 786959,
    "score": 112,
    "start": 786271,
  },
  {
    "end": 787647,
    "score": 116,
    "start": 786959,
  },
  {
    "end": 788335,
    "score": 105,
    "start": 787647,
  },
  {
    "end": 789225,
    "score": 93,
    "start": 788335,
  },
  {
    "end": 789924,
    "score": 85,
    "start": 789225,
  },
  {
    "end": 790791,
    "score": 99,
    "start": 789924,
  },
  {
    "end": 791483,
    "score": 100,
    "start": 790791,
  },
  {
    "end": 792207,
    "score": 97,
    "start": 791483,
  },
  {
    "end": 792895,
    "score": 86,
    "start": 792207,
  },
  {
    "end": 793583,
    "score": 92,
    "start": 792895,
  },
  {
    "end": 794385,
    "score": 81,
    "start": 793583,
  },
  {
    "end": 795074,
    "score": 100,
    "start": 794385,
  },
  {
    "end": 795803,
    "score": 85,
    "start": 795074,
  },
  {
    "end": 796491,
    "score": 112,
    "start": 795803,
  },
  {
    "end": 797179,
    "score": 100,
    "start": 796491,
  },
  {
    "end": 797867,
    "score": 107,
    "start": 797179,
  },
  {
    "end": 798566,
    "score": 95,
    "start": 797867,
  },
  {
    "end": 799254,
    "score": 81,
    "start": 798566,
  },
  {
    "end": 799942,
    "score": 89,
    "start": 799254,
  },
  {
    "end": 800638,
    "score": 84,
    "start": 799942,
  },
  {
    "end": 801326,
    "score": 102,
    "start": 800638,
  },
  {
    "end": 802014,
    "score": 113,
    "start": 801326,
  },
  {
    "end": 802702,
    "score": 80,
    "start": 802014,
  },
  {
    "end": 803422,
    "score": 102,
    "start": 802702,
  },
  {
    "end": 804110,
    "score": 85,
    "start": 803422,
  },
  {
    "end": 804798,
    "score": 89,
    "start": 804110,
  },
  {
    "end": 805486,
    "score": 95,
    "start": 804798,
  },
  {
    "end": 806174,
    "score": 114,
    "start": 805486,
  },
  {
    "end": 806862,
    "score": 113,
    "start": 806174,
  },
  {
    "end": 807639,
    "score": 93,
    "start": 806862,
  },
  {
    "end": 808334,
    "score": 119,
    "start": 807639,
  },
  {
    "end": 809025,
    "score": 95,
    "start": 808334,
  },
  {
    "end": 815945,
    "score": 105,
    "start": 809025,
  },
  {
    "end": 816713,
    "score": 106,
    "start": 815945,
  },
  {
    "end": 817705,
    "score": 100,
    "start": 816713,
  },
  {
    "end": 818784,
    "score": 92,
    "start": 817705,
  },
  {
    "end": 820016,
    "score": 119,
    "start": 818784,
  },
]
`;

exports[`test uncompressed bw (-unc from wigToBigWig) 1`] = `
[
  {
    "end": 40000,
    "score": 23,
    "start": 39999,
  },
  {
    "end": 40001,
    "score": 23,
    "start": 40000,
  },
  {
    "end": 40002,
    "score": 23,
    "start": 40001,
  },
  {
    "end": 40003,
    "score": 23,
    "start": 40002,
  },
  {
    "end": 40004,
    "score": 25,
    "start": 40003,
  },
  {
    "end": 40005,
    "score": 25,
    "start": 40004,
  },
  {
    "end": 40006,
    "score": 24,
    "start": 40005,
  },
  {
    "end": 40007,
    "score": 23,
    "start": 40006,
  },
  {
    "end": 40008,
    "score": 22,
    "start": 40007,
  },
  {
    "end": 40009,
    "score": 22,
    "start": 40008,
  },
]
`;
